pull translations from crowndin

--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -1,5 +1,5 @@
 {
-  "privacyPolicy": "Terms & Privacy Policy",
+  "privacyPolicy": "Podmínky používání a zásady ochrany osobních údajů",
   "copyErrorAndQuit": "Zkopírovat chybu a ukončit",
   "unknown": "Unknown",
   "databaseError": "Chyba databáze",
@@ -20,8 +20,6 @@
   "editMenuPasteAndMatchStyle": "Vložit a aplikovat styl",
   "editMenuDelete": "Vymazat",
   "editMenuSelectAll": "Vybrat vše",
-  "editMenuStartSpeaking": "Začít mluvit",
-  "editMenuStopSpeaking": "Přestat mluvit",
   "windowMenuClose": "Zavřít okno",
   "windowMenuMinimize": "Minimalizovat",
   "windowMenuZoom": "Lupa",
@@ -31,35 +29,26 @@
   "viewMenuZoomOut": "Oddálit",
   "viewMenuToggleFullScreen": "Přepnout na plnou obrazovku",
   "viewMenuToggleDevTools": "Přepnout na nástroje vývojáře",
-  "menuSetupWithImport": "Nastavit importem",
   "contextMenuNoSuggestions": "No Suggestions",
+  "openGroupInvitation": "Open group invitation",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Připojit se k $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "Nahrávání...",
   "optimizingApplication": "Optimalizace aplikace...",
-  "chooseDirectory": "Vybrat složku",
   "done": "Done",
-  "loadDataHeader": "Nahrajte vaše data",
-  "loadDataDescription": "You've just gone through the export process, and your contacts and messages are waiting patiently on your computer. Select the folder that contains your saved Session data.",
-  "importChooserTitle": "Zvolte složku s exportovanými daty",
-  "importErrorHeader": "Něco se pokazilo!",
-  "importingHeader": "Načítání kontaktů a zpráv",
-  "importErrorFirst": "Make sure you have chosen the correct directory that contains your saved Session data. Its name should begin with 'Session Export.' You can also save a new copy of your data from the Chrome App.",
-  "importErrorSecond": "If these steps don't work for you, please submit a debug log (View -> Debug Log) so that we can help you get migrated!",
-  "importAgain": "Vyberte složku a zkuste znovu",
-  "importCompleteHeader": "Provedeno!",
-  "importCompleteStartButton": "Začít používat Session Desktop",
-  "importCompleteLinkButton": "Připojit zařízení k telefonu",
   "me": "Já",
   "view": "Zobrazit",
   "youLeftTheGroup": "Opustil jste skupinu",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "1 Nepřečtená zpráva",
-  "unreadMessages": "$count$ nepřečtených zpráv",
+  "unreadMessage": "Unread Message",
+  "unreadMessages": "Unread Messages",
   "debugLogExplanation": "Tento záznam bude přispěvatelům veřejně zpřístupněn k prohlížení. Můžete si jej před odesláním zkontrolovat a upravit.",
   "debugLogError": "Something went wrong with the upload! Please consider manually adding your log to the bug you file.",
   "reportIssue": "Nahlásit problém",
   "gotIt": "Rozumím!",
   "submit": "Odeslat",
-  "markAllAsRead": "Mark All as Read",
+  "markAllAsRead": "Označit vše jako přečtené",
   "incomingError": "Chyba při zpracování příchozí zprávy",
   "media": "Média",
   "mediaEmptyState": "V konverzaci nejsou žádná média",
@@ -96,7 +85,7 @@
   "conversationsHeader": "Konverzace",
   "contactsHeader": "Kontakty",
   "messagesHeader": "Zprávy",
-  "settingsHeader": "Settings",
+  "settingsHeader": "Nastavení",
   "typingAlt": "Typing animation for this conversation",
   "contactAvatarAlt": "Avatar for contact $name$",
   "downloadAttachment": "Stáhnout přílohu",
@@ -116,8 +105,8 @@
   "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
   "ok": "OK",
   "cancel": "Zrušit",
-  "close": "Close",
-  "continue": "Continue",
+  "close": "Zavřít",
+  "continue": "Pokračovat",
   "error": "Chyba",
   "delete": "Vymazat",
   "deletePublicWarning": "Are you sure? This will permanently remove this message for everyone in this open group.",
@@ -157,12 +146,14 @@
   "saved": "Saved",
   "permissions": "Oprávnění",
   "general": "Obecné",
+  "tookAScreenshot": "$name$ pořídil snímek obrazovky",
+  "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
   "linkPreviewDescription": "Previews are supported for most urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
-  "mediaPermissionsTitle": "Microphone and Camera",
+  "mediaPermissionsTitle": "Mikrofon a fotoaparát",
   "mediaPermissionsDescription": "Umožnit přístup ke kameře a mikrofonu",
-  "spellCheckTitle": "Spell Check",
+  "spellCheckTitle": "Kontrola pravopisu",
   "spellCheckDescription": "Kontrolovat pravopis při psaní zpráv",
   "spellCheckDirty": "You must restart Session to apply your new settings",
   "notifications": "Oznámení",
@@ -210,6 +201,8 @@
   "disappearingMessages": "Mizející zprávy",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear nickname",
+  "nicknamePlaceholder": "Nová přezdívka",
+  "changeNicknameMessage": "Enter a nickname for this user",
   "timerOption_0_seconds_abbreviated": "vyp.",
   "timerOption_5_seconds_abbreviated": "5 s",
   "timerOption_10_seconds_abbreviated": "10 s",
@@ -231,15 +224,16 @@
   "hideMenuBarDescription": "Toggle system menu bar visibility",
   "startConversation": "Start new conversation…",
   "invalidNumberError": "Neplatné číslo",
+  "failedResolveOns": "Failed to resolve ONS name",
   "successUnlinked": "Your device was unlinked successfully",
-  "autoUpdateSettingTitle": "Auto Update",
+  "autoUpdateSettingTitle": "Automatické aktualizace",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Dostupná aktualizace Session",
   "autoUpdateNewVersionMessage": "Je k dispozici nová verze aplikace Session.",
   "autoUpdateNewVersionInstructions": "Stiskněte na Restartovat Session pro aplikování změn",
   "autoUpdateRestartButtonLabel": "Restartovat Session",
   "autoUpdateLaterButtonLabel": "Později",
-  "autoUpdateDownloadButtonLabel": "Download",
+  "autoUpdateDownloadButtonLabel": "Stáhnout",
   "autoUpdateDownloadedMessage": "The new update has been downloaded.",
   "autoUpdateDownloadInstructions": "Would you like to download the update?",
   "leftTheGroup": "$name$ opustil skupinu",
@@ -253,6 +247,7 @@
   "blockUser": "Block",
   "unblockUser": "Unblock",
   "unblocked": "Unblocked",
+  "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked contacts",
   "unbanUser": "Unban User",
   "unbanUserConfirm": "Are you sure you want to unban user?",
@@ -260,6 +255,8 @@
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
   "banUserConfirm": "Are you sure you want to ban user?",
+  "banUserAndDeleteAll": "Ban and Delete All",
+  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "Leave Group",
@@ -268,9 +265,9 @@
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
   "cannotRemoveCreatorFromGroup": "Cannot remove this user",
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
-  "userNeedsToHaveJoined": "User needs to have joined",
-  "userNeedsToHaveJoinedDesc": "An error happened. The user needs to have already joined the server for this ADD to work.",
   "noContactsForGroup": "You don't have any contacts yet",
+  "failedToAddAsModerator": "Failed to add user as moderator",
+  "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
   "copyMessage": "Copy message text",
   "selectMessage": "Select message",
   "editGroup": "Edit group",
@@ -359,7 +356,7 @@
   "beginYourSession": "Begin<br />your<br />Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
-  "searchFor...": "Search for conversations, contacts, and messages",
+  "searchFor...": "Search for conversations or contacts",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
@@ -386,9 +383,41 @@
   "noBlockedContacts": "No blocked contacts",
   "userAddedToModerators": "User added to moderator list",
   "userRemovedFromModerators": "User removed from moderator list",
-  "errorHappenedWhileRemovingModerator": "An error happened",
-  "errorHappenedWhileRemovingModeratorDesc": "An error happened while removing this user from the moderator list.",
   "orJoinOneOfThese": "Or join one of these...",
   "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation"
+  "translation": "Translation",
+  "closedGroupInviteFailTitle": "Group Invitation Failed",
+  "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
+  "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
+  "closedGroupInviteFailMessagePlural": "Unable to successfully invite all group members",
+  "closedGroupInviteOkText": "Retry invitations",
+  "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
+  "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
+  "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
+  "notificationForConvo": "Notifications",
+  "notificationForConvo_all": "All",
+  "notificationForConvo_disabled": "Disabled",
+  "notificationForConvo_mentions_only": "Mentions only",
+  "onionPathIndicatorTitle": "Path",
+  "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
+  "unknownCountry": "Unknown Country",
+  "device": "Device",
+  "destination": "Destination",
+  "learnMore": "Learn more",
+  "linkVisitWarningTitle": "Open this link in your browser?",
+  "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
+  "open": "Open",
+  "audioMessageAutoplayTitle": "Audio Message Autoplay",
+  "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
+  "clickToTrustContact": "Click to download media",
+  "trustThisContactDialogTitle": "Trust $name$?",
+  "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
+  "pinConversation": "Pin Conversation",
+  "unpinConversation": "Unpin Conversation",
+  "pinConversationLimitTitle": "Pinned conversations limit",
+  "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "latestUnreadIsAbove": "First unread message is above",
+  "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
+  "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "notificationSubtitle": "Notifications - $setting$"
 }
