--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -20,8 +20,6 @@
   "editMenuPasteAndMatchStyle": "Unformatiert einfügen",
   "editMenuDelete": "Löschen",
   "editMenuSelectAll": "Alle Auswählen",
-  "editMenuStartSpeaking": "Sprachausgabe starten",
-  "editMenuStopSpeaking": "Sprachausgabe stoppen",
   "windowMenuClose": "Fenster schließen",
   "windowMenuMinimize": "Minimieren",
   "windowMenuZoom": "Zoom",
@@ -31,35 +29,26 @@
   "viewMenuZoomOut": "Darstellung verkleinern",
   "viewMenuToggleFullScreen": "Vollbild an/aus",
   "viewMenuToggleDevTools": "Entwicklerwerkzeuge an/aus",
-  "menuSetupWithImport": "Einrichten mit Importieren",
-  "contextMenuNoSuggestions": "No Suggestions",
+  "contextMenuNoSuggestions": "Keine Vorschläge",
+  "openGroupInvitation": "Gruppeneinladung öffnen",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Trete $roomName$ bei?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Bist du sicher, dass du der offenen Gruppe $roomName$ beitreten möchtest?",
+  "enterSessionIDOrONSName": "Session-ID oder ONS-Name eingeben",
   "loading": "Wird geladen …",
   "optimizingApplication": "Anwendung wird optimiert …",
-  "chooseDirectory": "Ordner wählen",
-  "done": "Done",
-  "loadDataHeader": "Lade deine Daten",
-  "loadDataDescription": "Du hast gerade den Exportierungsprozess durchlaufen, und deine Kontakte und Nachrichten warten geduldig auf deinem Computer. Wähle nun den Ordner aus, der deine gespeicherten Session-Daten enthält.",
-  "importChooserTitle": "Wähle das Verzeichnis mit den exportierten Daten",
-  "importErrorHeader": "Etwas ist schiefgelaufen!",
-  "importingHeader": "Kontakte und Nachrichten werden geladen …",
-  "importErrorFirst": "Achte darauf, dass du das korrekte Verzeichnis gewählt hast, das deine gespeicherten Session-Daten enthält. Dessen Name sollte mit »Session Export« beginnen. Auch kannst du eine neue Kopie deiner Daten aus der Chrome-App heraus speichern.",
-  "importErrorSecond": "Falls diese Schritte nicht helfen, übermittle bitte ein Diagnoseprotokoll (Ansicht >> Diagnoseprotokoll), sodass wir dir bei der Datenmigration helfen können!",
-  "importAgain": "Ordner wählen und erneut versuchen",
-  "importCompleteHeader": "Erfolgreich!",
-  "importCompleteStartButton": "Session Desktop verwenden",
-  "importCompleteLinkButton": "Dieses Gerät mit deinem Telefon koppeln",
+  "done": "Abgeschlossen",
   "me": "Ich",
   "view": "Anzeigen",
   "youLeftTheGroup": "Du hast die Gruppe verlassen",
-  "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "$count$ Ungelesene Nachricht",
-  "unreadMessages": "$count$ Ungelesene Nachrichten",
+  "youGotKickedFromGroup": "Du wurdest aus der Gruppe entfernt.",
+  "unreadMessage": "Ungelesene Nachricht",
+  "unreadMessages": "Ungelesene Nachrichten",
   "debugLogExplanation": "Dieses Diagnoseprotokoll wird im Internet veröffentlicht, damit Mitwirkende es einsehen können. Bevor du das Protokoll übermittelst, kannst du es noch einmal überpüfen und bearbeiten.",
   "debugLogError": "Beim Hochladen gab es ein Problem. Falls möglich, füge bitte das Protokoll manuell deiner eingereichten Problembeschreibung hinzu.",
   "reportIssue": "Problem melden",
   "gotIt": "Verstanden",
   "submit": "Übermitteln",
-  "markAllAsRead": "Mark All as Read",
+  "markAllAsRead": "Alle als gelesen markieren",
   "incomingError": "Fehler bei eingehender Nachricht",
   "media": "Medieninhalte",
   "mediaEmptyState": "Keine Medieninhalte",
@@ -101,7 +90,7 @@
   "contactAvatarAlt": "Kontaktavatar für $name$",
   "downloadAttachment": "Anhang herunterladen",
   "replyToMessage": "Auf Nachricht antworten",
-  "replyingToMessage": "Replying to:",
+  "replyingToMessage": "Antwort an:",
   "originalMessageNotFound": "Originalnachricht nicht gefunden",
   "originalMessageNotAvailable": "Originalnachricht nicht mehr verfügbar",
   "messageFoundButNotLoaded": "Originalnachricht gefunden, aber nicht geladen. Scrolle zum Laden nach oben.",
@@ -112,21 +101,21 @@
   "audio": "Audio",
   "video": "Video",
   "photo": "Foto",
-  "cannotUpdate": "Cannot Update",
-  "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
+  "cannotUpdate": "Kann nicht aktualisiert werden",
+  "cannotUpdateDetail": "Session Desktop konnte nicht aktualisiert werden, aber es ist eine neue Version verfügbar. Bitte gehen Sie auf https://getsession.org/ und installieren Sie die neue Version manuell; anschließend wenden Sie sich bitte entweder an den Support oder melden Sie das Problem.",
   "ok": "Ok",
   "cancel": "Abbrechen",
-  "close": "Close",
+  "close": "Schließen",
   "continue": "Weiter",
   "error": "Fehler",
   "delete": "Löschen",
-  "deletePublicWarning": "Are you sure? This will permanently remove this message for everyone in this open group.",
-  "deleteMultiplePublicWarning": "Are you sure? This will permanently remove these messages for everyone in this open group.",
+  "deletePublicWarning": "Sind Sie sicher? Dies wird diese Nachricht für alle Teilnehmer dieser offenen Gruppe dauerhaft entfernen.",
+  "deleteMultiplePublicWarning": "Sind Sie sicher? Dies wird diese Nachrichten für alle Teilnehmer dieser offenen Gruppe dauerhaft entfernen.",
   "deleteWarning": "Bist du sicher? Das Anklicken von »Löschen« wird diese Nachricht unwiderruflich von nur diesem Gerät entfernen.",
-  "deleteMultipleWarning": "Are you sure? Clicking 'delete' will permanently remove these messages from this device only.",
-  "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
+  "deleteMultipleWarning": "Sind Sie sicher? Ein Klick auf „Löschen“ löscht diese Nachrichten dauerhaft von diesem Gerät.",
+  "messageDeletionForbidden": "Ihnen fehlt die Berechtigung, Nachrichten anderer Teilnehmer zu löschen",
   "deleteThisMessage": "Nachrichten löschen",
-  "deleted": "Deleted",
+  "deleted": "Gelöscht",
   "from": "Von:",
   "to": "An:",
   "sent": "Gesendet",
@@ -137,8 +126,8 @@
   "resend": "Erneut Senden",
   "deleteMessage": "Nachrichten Löschen",
   "deleteMessages": "Alle Nachrichten löschen",
-  "deleteMessageForEveryone": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Delete Messages For Everyone",
+  "deleteMessageForEveryone": "Nachricht für alle löschen",
+  "deleteMessagesForEveryone": "Nachrichten für alle löschen",
   "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Soll diese Unterhaltung unwiderruflich gelöscht werden?",
   "clearAllData": "Alle Daten löschen",
@@ -151,26 +140,28 @@
   "imageCaptionIconAlt": "Symbol, das auf eine Beschriftung des Bildes hinweist",
   "addACaption": "Beschriftung hinzufügen …",
   "copy": "Kopieren",
-  "copySessionID": "Copy Session ID",
-  "copyOpenGroupURL": "Copy Group's URL",
+  "copySessionID": "Session-ID kopieren",
+  "copyOpenGroupURL": "Gruppen-URL kopieren",
   "save": "Speichern",
-  "saved": "Saved",
+  "saved": "Gespeichert",
   "permissions": "Berechtigungen",
   "general": "Allgemein",
+  "tookAScreenshot": "$name$ hat ein Bildschirmfoto gemacht",
+  "savedTheFile": "Medien gespeichert von $name$",
   "linkPreviewsTitle": "Link-Vorschauen Senden",
-  "linkPreviewDescription": "Previews are supported for most urls",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
-  "mediaPermissionsTitle": "Microphone and Camera",
+  "linkPreviewDescription": "Vorschau wird für die meisten URLs unterstützt",
+  "linkPreviewsConfirmMessage": "Beim Senden und Empfangen von Link-Vorschauen sind Ihre Metadaten nicht vollständig geschützt.",
+  "mediaPermissionsTitle": "Mikrofon und Kamera",
   "mediaPermissionsDescription": "Zugriff auf Kamera und Mikrofon erlauben",
-  "spellCheckTitle": "Spell Check",
+  "spellCheckTitle": "Rechtschreibprüfung",
   "spellCheckDescription": "Rechtschreibprüfung für im Nachrichteneingabefeld eingegebenen Text aktivieren",
-  "spellCheckDirty": "You must restart Session to apply your new settings",
+  "spellCheckDirty": "Sie müssen Session neu starten, um die neuen Einstellungen zu übernehmen",
   "notifications": "Benachrichtigungen",
   "readReceiptSettingDescription": "Lesebestätigungen aktivieren",
   "readReceiptSettingTitle": "Lesebestätigungen",
   "typingIndicatorsSettingDescription": "sehen und teilen, wann Nachrichten eingetippt werden",
   "typingIndicatorsSettingTitle": "Tipp-Indikatoren",
-  "zoomFactorSettingTitle": "Zoom Factor",
+  "zoomFactorSettingTitle": "Zoomstufe",
   "notificationSettingsDialog": "Beim Eingang von Nachrichten Benachrichtigungen mit folgendem Inhalt anzeigen:",
   "disableNotifications": "Stummschalten",
   "nameAndMessage": "Kontaktname und Nachricht",
@@ -189,7 +180,7 @@
   "timestamp_m": "1 Minute",
   "timestamp_h": "1 Stunde",
   "timestampFormat_M": "D. MMM",
-  "messageBodyMissing": "Please enter a message body.",
+  "messageBodyMissing": "Bitte geben Sie einen Nachrichtentext ein.",
   "unblockToSend": "Gib die Blockierung dieses Kontakts frei, um eine Nachricht zu senden.",
   "unblockGroupToSend": "Gib die Blockierung dieser Gruppe frei, um eine Nachricht zu senden.",
   "youChangedTheTimer": "Du hast die Zeit für verschwindende Nachrichten auf $time$ festgelegt.",
@@ -208,8 +199,10 @@
   "timerOption_1_day": "1 Tag",
   "timerOption_1_week": "1 Woche",
   "disappearingMessages": "Verschwindende Nachrichten",
-  "changeNickname": "Change Nickname",
+  "changeNickname": "Spitzname bearbeiten",
   "clearNickname": "Clear nickname",
+  "nicknamePlaceholder": "Neuer Spitzname",
+  "changeNicknameMessage": "Geben Sie einen Spitznahmen für diesen Benutzer ein",
   "timerOption_0_seconds_abbreviated": "aus",
   "timerOption_5_seconds_abbreviated": "5s",
   "timerOption_10_seconds_abbreviated": "10s",
@@ -220,19 +213,20 @@
   "timerOption_1_hour_abbreviated": "1h",
   "timerOption_6_hours_abbreviated": "6h",
   "timerOption_12_hours_abbreviated": "12h",
-  "timerOption_1_day_abbreviated": "1d",
-  "timerOption_1_week_abbreviated": "1w",
+  "timerOption_1_day_abbreviated": "1T",
+  "timerOption_1_week_abbreviated": "1W",
   "disappearingMessagesDisabled": "Verschwindende Nachrichten deaktiviert",
   "disabledDisappearingMessages": "$name$ hat verschwindende Nachrichten deaktiviert.",
   "youDisabledDisappearingMessages": "Du hast verschwindende Nachrichten deaktiviert.",
   "timerSetTo": "Zeit für verschwindende Nachrichten auf $time$ festgelegt",
   "noteToSelf": "Notiz an mich",
-  "hideMenuBarTitle": "Hide Menu Bar",
-  "hideMenuBarDescription": "Toggle system menu bar visibility",
+  "hideMenuBarTitle": "Menüleiste ausblenden",
+  "hideMenuBarDescription": "Sichtbarkeit des Menüleiste umschalten",
   "startConversation": "Neue Unterhaltung beginnen …",
   "invalidNumberError": "Ungültige Rufnummer",
+  "failedResolveOns": "Fehler beim Auflösen des ONS-Namens",
   "successUnlinked": "Ihr Gerät wurde erfolgreich getrennt.",
-  "autoUpdateSettingTitle": "Auto Update",
+  "autoUpdateSettingTitle": "Automatische Aktualisierung",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Aktualisierung für Session verfügbar",
   "autoUpdateNewVersionMessage": "Eine neue Version von Session ist verfügbar.",
@@ -241,18 +235,19 @@
   "autoUpdateLaterButtonLabel": "Später",
   "autoUpdateDownloadButtonLabel": "Herunterladen",
   "autoUpdateDownloadedMessage": "The new update has been downloaded.",
-  "autoUpdateDownloadInstructions": "Would you like to download the update?",
+  "autoUpdateDownloadInstructions": "Möchten Sie die Aktualisierung herunterladen?",
   "leftTheGroup": "$name$ hat die Gruppe verlassen",
   "multipleLeftTheGroup": "$name$ hat die Gruppe verlassen",
   "updatedTheGroup": "Gruppe aktualisiert",
   "titleIsNow": "Gruppenname lautet jetzt »$name$«.",
   "joinedTheGroup": "$name$ ist der Gruppe beigetreten.",
   "multipleJoinedTheGroup": "$name$ sind der Gruppe beigetreten.",
-  "kickedFromTheGroup": "$name$ was removed from the group.",
-  "multipleKickedFromTheGroup": "$name$ were removed from the group.",
+  "kickedFromTheGroup": "$name$ wurde aus der Gruppe entfernt.",
+  "multipleKickedFromTheGroup": "$name$ wurden aus der Gruppe entfernt.",
   "blockUser": "Blockieren",
   "unblockUser": "Freigeben",
   "unblocked": "Unblocked",
+  "blocked": "Blocked",
   "blockedSettingsTitle": "Blockierte Kontakte",
   "unbanUser": "Unban User",
   "unbanUserConfirm": "Are you sure you want to unban user?",
@@ -260,6 +255,8 @@
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
   "banUserConfirm": "Are you sure you want to ban user?",
+  "banUserAndDeleteAll": "Ban and Delete All",
+  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "Gruppe Verlassen",
@@ -268,9 +265,9 @@
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
   "cannotRemoveCreatorFromGroup": "Cannot remove this user",
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
-  "userNeedsToHaveJoined": "User needs to have joined",
-  "userNeedsToHaveJoinedDesc": "An error happened. The user needs to have already joined the server for this ADD to work.",
   "noContactsForGroup": "Sie haben noch keine Kontakte.",
+  "failedToAddAsModerator": "Failed to add user as moderator",
+  "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
   "copyMessage": "Copy message text",
   "selectMessage": "Select message",
   "editGroup": "Gruppe bearbeiten",
@@ -359,7 +356,7 @@
   "beginYourSession": "Beginnen<br />Sie<br />Ihre<br />Session.",
   "welcomeToYourSession": "Willkommen bei Session",
   "newSession": "Neue Session",
-  "searchFor...": "Nach Unterhaltungen, Kontakten und Nachrichten suchen",
+  "searchFor...": "Search for conversations or contacts",
   "enterSessionID": "Session ID eingeben",
   "enterSessionIDOfRecipient": "Geben Sie eine Session ID ein.",
   "usersCanShareTheir...": "Benutzer können ihre Session ID freigeben, indem sie in ihren Einstellungen auf \"Session ID freigeben\" tippen oder ihren QR-Code freigeben.",
@@ -386,9 +383,41 @@
   "noBlockedContacts": "No blocked contacts",
   "userAddedToModerators": "User added to moderator list",
   "userRemovedFromModerators": "User removed from moderator list",
-  "errorHappenedWhileRemovingModerator": "An error happened",
-  "errorHappenedWhileRemovingModeratorDesc": "An error happened while removing this user from the moderator list.",
   "orJoinOneOfThese": "Or join one of these...",
   "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation"
+  "translation": "Translation",
+  "closedGroupInviteFailTitle": "Group Invitation Failed",
+  "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
+  "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
+  "closedGroupInviteFailMessagePlural": "Unable to successfully invite all group members",
+  "closedGroupInviteOkText": "Retry invitations",
+  "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
+  "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
+  "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
+  "notificationForConvo": "Notifications",
+  "notificationForConvo_all": "All",
+  "notificationForConvo_disabled": "Disabled",
+  "notificationForConvo_mentions_only": "Mentions only",
+  "onionPathIndicatorTitle": "Path",
+  "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
+  "unknownCountry": "Unknown Country",
+  "device": "Device",
+  "destination": "Destination",
+  "learnMore": "Learn more",
+  "linkVisitWarningTitle": "Open this link in your browser?",
+  "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
+  "open": "Open",
+  "audioMessageAutoplayTitle": "Audio Message Autoplay",
+  "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
+  "clickToTrustContact": "Click to download media",
+  "trustThisContactDialogTitle": "Trust $name$?",
+  "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
+  "pinConversation": "Pin Conversation",
+  "unpinConversation": "Unpin Conversation",
+  "pinConversationLimitTitle": "Pinned conversations limit",
+  "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "latestUnreadIsAbove": "First unread message is above",
+  "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
+  "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "notificationSubtitle": "Notifications - $setting$"
 }
