--- a/_locales/el/messages.json
+++ b/_locales/el/messages.json
@@ -20,8 +20,6 @@
   "editMenuPasteAndMatchStyle": "Επικόλληση και Αντιστοίχιση Στυλ",
   "editMenuDelete": "Διαγραφή",
   "editMenuSelectAll": "Επιλογή Όλων",
-  "editMenuStartSpeaking": "Έναρξη ομιλίας",
-  "editMenuStopSpeaking": "Διακοπή ομιλίας",
   "windowMenuClose": "Κλείσιμο Παραθύρου",
   "windowMenuMinimize": "Ελαχιστοποίηση",
   "windowMenuZoom": "Μεγέθυνση",
@@ -31,29 +29,20 @@
   "viewMenuZoomOut": "Σμίκρυνση",
   "viewMenuToggleFullScreen": "Εναλλαγή Πλήρους Οθόνης",
   "viewMenuToggleDevTools": "Εναλλαγή Εργαλείων Προγραμματιστή",
-  "menuSetupWithImport": "Εγκατάσταση με Εισαγωγή",
   "contextMenuNoSuggestions": "No Suggestions",
+  "openGroupInvitation": "Open group invitation",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "Λήψη...",
   "optimizingApplication": "Βελτιστοποίηση εφαρμογής",
-  "chooseDirectory": "Επιλογή φακέλου",
   "done": "Done",
-  "loadDataHeader": "Φόρτωση δεδομένων",
-  "loadDataDescription": "Μόλις περάσατε τη διαδικασία εξαγωγής και οι επαφές και τα μηνύματά σας περιμένουν υπομονετικά τον υπολογιστή σας. Επιλέξτε τον φάκελο που περιέχει τα αποθηκευμένα δεδομένα του Session σας.",
-  "importChooserTitle": "Επέλεξε τον φάκελο με τα δεδομένα που εξήχθησαν",
-  "importErrorHeader": "Κάτι πήγε στραβά!",
-  "importingHeader": "Φόρτωση επαφών και μυνημάτων",
-  "importErrorFirst": "Βεβαιωθείτε ότι έχετε επιλέξει τον σωστό φάκελο που περιέχει τα αποθηκευμένα δεδομένα του Session. Το όνομά του θα πρέπει να ξεκινά με το 'Session Export.' Μπορείτε επίσης να αποθηκεύσετε ένα νέο αντίγραφο των δεδομένων σας από την εφαρμογή Chrome.",
-  "importErrorSecond": "Αν αυτά τα βήματα δεν λειτουργούν για εσάς, υποβάλετε ένα αρχείο καταγραφής αποσφαλμάτωσης (Προβολή -> Αρχείο Αποσφαλμάτωσης) για να μπορέσουμε να σας βοηθήσουμε να μεταφερθείτε!",
-  "importAgain": "Επιλέξτε το φάκελο και προσπαθήστε ξανά",
-  "importCompleteHeader": "Επιτυχία!",
-  "importCompleteStartButton": "Ξεκινήστε τη χρήση του Session Desktop",
-  "importCompleteLinkButton": "Σύνδεση αυτής της συσκευής με το τηλέφωνό σας",
   "me": "Εγώ",
   "view": "Εμφάνιση",
   "youLeftTheGroup": "Αποχωρήσατε από την ομάδα",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "1 μη αναγνωσμένο μήνυμα",
-  "unreadMessages": "$count$ μη αναγνωσμένα μηνύματα",
+  "unreadMessage": "Unread Message",
+  "unreadMessages": "Unread Messages",
   "debugLogExplanation": "Αυτό το αρχείο καταγραφής συμβάντων θα αναρτηθεί δημόσια στο διαδίκτυο για προβολή από τους συνεισφέροντες. Μπορείτε να το εξετάσετε και να το επεξεργαστείτε πριν το υποβάλετε.",
   "debugLogError": "Κάτι πήγε στραβά με τη μεταφόρτωση! Παρακαλώ σκεφτείτε μήπως να καταχωρίσετε χειροκίνητα στο αρχείο το σφάλμα που υποβάλετε.",
   "reportIssue": "Υποβολή παραπόνου",
@@ -157,6 +146,8 @@
   "saved": "Saved",
   "permissions": "Άδειες",
   "general": "Γενικά",
+  "tookAScreenshot": "$name$ took a screenshot",
+  "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
   "linkPreviewDescription": "Previews are supported for most urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
@@ -210,6 +201,8 @@
   "disappearingMessages": "Μηνύματα που εξαφανίζονται",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear nickname",
+  "nicknamePlaceholder": "New Nickname",
+  "changeNicknameMessage": "Enter a nickname for this user",
   "timerOption_0_seconds_abbreviated": "απενεργοποιημένο",
   "timerOption_5_seconds_abbreviated": "5δ",
   "timerOption_10_seconds_abbreviated": "10δ",
@@ -231,6 +224,7 @@
   "hideMenuBarDescription": "Toggle system menu bar visibility",
   "startConversation": "Start new conversation…",
   "invalidNumberError": "Μη έγκυρος αριθμός",
+  "failedResolveOns": "Failed to resolve ONS name",
   "successUnlinked": "Your device was unlinked successfully",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
@@ -253,6 +247,7 @@
   "blockUser": "Block",
   "unblockUser": "Unblock",
   "unblocked": "Unblocked",
+  "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked contacts",
   "unbanUser": "Unban User",
   "unbanUserConfirm": "Are you sure you want to unban user?",
@@ -260,6 +255,8 @@
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
   "banUserConfirm": "Are you sure you want to ban user?",
+  "banUserAndDeleteAll": "Ban and Delete All",
+  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "Leave Group",
@@ -268,9 +265,9 @@
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
   "cannotRemoveCreatorFromGroup": "Cannot remove this user",
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
-  "userNeedsToHaveJoined": "User needs to have joined",
-  "userNeedsToHaveJoinedDesc": "An error happened. The user needs to have already joined the server for this ADD to work.",
   "noContactsForGroup": "You don't have any contacts yet",
+  "failedToAddAsModerator": "Failed to add user as moderator",
+  "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
   "copyMessage": "Copy message text",
   "selectMessage": "Select message",
   "editGroup": "Edit group",
@@ -359,7 +356,7 @@
   "beginYourSession": "Begin<br />your<br />Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
-  "searchFor...": "Search for conversations, contacts, and messages",
+  "searchFor...": "Search for conversations or contacts",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
@@ -386,9 +383,41 @@
   "noBlockedContacts": "No blocked contacts",
   "userAddedToModerators": "User added to moderator list",
   "userRemovedFromModerators": "User removed from moderator list",
-  "errorHappenedWhileRemovingModerator": "An error happened",
-  "errorHappenedWhileRemovingModeratorDesc": "An error happened while removing this user from the moderator list.",
   "orJoinOneOfThese": "Or join one of these...",
   "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation"
+  "translation": "Translation",
+  "closedGroupInviteFailTitle": "Group Invitation Failed",
+  "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
+  "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
+  "closedGroupInviteFailMessagePlural": "Unable to successfully invite all group members",
+  "closedGroupInviteOkText": "Retry invitations",
+  "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
+  "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
+  "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
+  "notificationForConvo": "Notifications",
+  "notificationForConvo_all": "All",
+  "notificationForConvo_disabled": "Disabled",
+  "notificationForConvo_mentions_only": "Mentions only",
+  "onionPathIndicatorTitle": "Path",
+  "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
+  "unknownCountry": "Unknown Country",
+  "device": "Device",
+  "destination": "Destination",
+  "learnMore": "Learn more",
+  "linkVisitWarningTitle": "Open this link in your browser?",
+  "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
+  "open": "Open",
+  "audioMessageAutoplayTitle": "Audio Message Autoplay",
+  "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
+  "clickToTrustContact": "Click to download media",
+  "trustThisContactDialogTitle": "Trust $name$?",
+  "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
+  "pinConversation": "Pin Conversation",
+  "unpinConversation": "Unpin Conversation",
+  "pinConversationLimitTitle": "Pinned conversations limit",
+  "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "latestUnreadIsAbove": "First unread message is above",
+  "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
+  "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "notificationSubtitle": "Notifications - $setting$"
 }
