--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -20,8 +20,6 @@
   "editMenuPasteAndMatchStyle": "Coller et faire correspondre le style",
   "editMenuDelete": "Supprimer",
   "editMenuSelectAll": "Tout sélectionner",
-  "editMenuStartSpeaking": "Commencer à parler",
-  "editMenuStopSpeaking": "Arrêter de parler",
   "windowMenuClose": "Fermer la fenêtre",
   "windowMenuMinimize": "Réduire",
   "windowMenuZoom": "Agrandir",
@@ -31,29 +29,20 @@
   "viewMenuZoomOut": "Zoom arrière",
   "viewMenuToggleFullScreen": "Activer/désactiver le plein écran",
   "viewMenuToggleDevTools": "Afficher/cacher les outils pour développeurs",
-  "menuSetupWithImport": "Configurer avec importation",
   "contextMenuNoSuggestions": "Pas de suggestions",
+  "openGroupInvitation": "Invitation de groupe public",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Rejoindre $roomName$ ?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Êtes-vous sûr de vouloir rejoindre le groupe public $roomName$ ?",
+  "enterSessionIDOrONSName": "Entrer un Session ID ou un nom ONS",
   "loading": "Chargement…",
   "optimizingApplication": "Optimisation de l’application…",
-  "chooseDirectory": "Sélectionner un dossier",
   "done": "Terminer",
-  "loadDataHeader": "Chargez vos données",
-  "loadDataDescription": "Vous venez de passer par le processus d’exportation, et vos contacts et messages attendent patiemment sur votre ordinateur. Sélectionnez le dossier contenant vos données relatives à Session enregistrées.",
-  "importChooserTitle": "Sélectionner le répertoire contenant les données exportées",
-  "importErrorHeader": "Une erreur s’est produite !",
-  "importingHeader": "Chargement des contacts et messages",
-  "importErrorFirst": "Assurez-vous d’avoir sélectionné le bon répertoire contenant vos données relatives à Session enregistrées. Son nom devrait commencer par « Signal Export ». Vous pouvez également enregistrer une nouvelle copie de vos données à partir de l’application Chrome.",
-  "importErrorSecond": "Si ces étapes ne fonctionnent pas, veuillez envoyer un journal de débogage (Affichage -> Journal de débogage) afin que nous puissions vous aider à migrer !",
-  "importAgain": "Sélectionner un dossier et ressayer",
-  "importCompleteHeader": "L’importation est réussie !",
-  "importCompleteStartButton": "Commencez à utiliser Session Desktop pour ordinateur",
-  "importCompleteLinkButton": "Relier cet appareil à votre téléphone",
   "me": "Moi",
   "view": "Voir",
   "youLeftTheGroup": "Vous avez quitté le groupe",
   "youGotKickedFromGroup": "Vous avez été retiré du groupe.",
-  "unreadMessage": "$count$ message non lu",
-  "unreadMessages": "$count$ messages non lus",
+  "unreadMessage": "Message non lu",
+  "unreadMessages": "Messages non lus",
   "debugLogExplanation": "Ce journal sera publié en ligne publiquement pour être consulté par les contributeurs. Vous pouvez l’examiner et l’éditer avant de l’envoyer.",
   "debugLogError": "Un problème est survenu lors du téléversement ! Veuillez envisager d’ajouter manuellement votre journal à votre rapport de bogue.",
   "reportIssue": "Signaler un problème",
@@ -157,6 +146,8 @@
   "saved": "Enregistré",
   "permissions": "Autorisations",
   "general": "Général",
+  "tookAScreenshot": "$name$ a pris une capture d’écran",
+  "savedTheFile": "$name$ a enregistré le média",
   "linkPreviewsTitle": "Envoyer des aperçus de liens",
   "linkPreviewDescription": "Les aperçus sont pris en charge pour la plupart des URLs",
   "linkPreviewsConfirmMessage": "Vous n'aurez pas une protection complète des métadonnées en envoyant ou recevant des aperçu de liens.",
@@ -208,8 +199,10 @@
   "timerOption_1_day": "1 jour",
   "timerOption_1_week": "1 semaine",
   "disappearingMessages": "Messages éphémères",
-  "changeNickname": "Changer le surnom",
+  "changeNickname": "Modifier le surnom",
   "clearNickname": "Supprimer le surnom",
+  "nicknamePlaceholder": "Nouveau surnom",
+  "changeNicknameMessage": "Entrer un surnom pour cet utilisateur",
   "timerOption_0_seconds_abbreviated": "Désactivé",
   "timerOption_5_seconds_abbreviated": "5 s",
   "timerOption_10_seconds_abbreviated": "10 s",
@@ -231,6 +224,7 @@
   "hideMenuBarDescription": "Activer/Désactiver la barre de menu système",
   "startConversation": "Lancer une nouvelle conversation…",
   "invalidNumberError": "Le numéro est invalide",
+  "failedResolveOns": "Échec de résolution du nom ONS",
   "successUnlinked": "Votre appareil a été déconnecté avec succès",
   "autoUpdateSettingTitle": "Mise à jour automatique",
   "autoUpdateSettingDescription": "Rechercher automatiquement les mises à jour au lancement",
@@ -253,6 +247,7 @@
   "blockUser": "Bloquer",
   "unblockUser": "Débloquer",
   "unblocked": "Débloqué",
+  "blocked": "Bloqué",
   "blockedSettingsTitle": "Contacts bloqués",
   "unbanUser": "Débannir l'utilisateur",
   "unbanUserConfirm": "Êtes-vous sûr de vouloir débannir cet utilisateur ?",
@@ -270,9 +265,9 @@
   "leaveGroupConfirmationAdmin": "Comme vous êtes l'administrateur de ce groupe, si vous le quittez, il sera supprimé pour tous les membres actuels. Êtes-vous sûr de vouloir quitter ce groupe ?",
   "cannotRemoveCreatorFromGroup": "Impossible de supprimer cet utilisateur",
   "cannotRemoveCreatorFromGroupDesc": "Vous ne pouvez pas supprimer cet utilisateur car il est le créateur du groupe.",
-  "userNeedsToHaveJoined": "L'utilisateur doit avoir rejoint le serveur",
-  "userNeedsToHaveJoinedDesc": "Une erreur est survenue. L'utilisateur doit avoir déjà rejoint le serveur pour que cet ajout fonctionne.",
   "noContactsForGroup": "Vous n'avez pas encore de contacts",
+  "failedToAddAsModerator": "Impossible d'ajouter l'utilisateur en tant que modérateur",
+  "failedToRemoveFromModerator": "Impossible de supprimer l'utilisateur de la liste des modérateurs",
   "copyMessage": "Copier le texte du message",
   "selectMessage": "Sélectionner le message",
   "editGroup": "Modifier le groupe",
@@ -388,13 +383,41 @@
   "noBlockedContacts": "Aucun contact n’est bloqué",
   "userAddedToModerators": "Utilisateur ajouté à la liste des modérateurs",
   "userRemovedFromModerators": "Utilisateur supprimé de la liste des modérateurs",
-  "errorHappenedWhileRemovingModerator": "Une erreur est survenue",
-  "errorHappenedWhileRemovingModeratorDesc": "Une erreur est survenue lors de la suppression de cet utilisateur de la liste des modérateurs.",
   "orJoinOneOfThese": "Ou rejoignez un de ceux-ci...",
-  "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation",
+  "helpUsTranslateSession": "Aidez-nous à traduire Session",
+  "translation": "Traduction",
+  "closedGroupInviteFailTitle": "Échec de l'invitation",
+  "closedGroupInviteFailTitlePlural": "Échec des invitations",
+  "closedGroupInviteFailMessage": "Impossible d'inviter avec succès un membre du groupe",
+  "closedGroupInviteFailMessagePlural": "Impossible d'inviter avec succès tous les membres du groupe",
+  "closedGroupInviteOkText": "Réessayer les invitations",
+  "closedGroupInviteSuccessTitlePlural": "Invitations de groupes terminées",
+  "closedGroupInviteSuccessTitle": "Invitation de groupe réussie",
+  "closedGroupInviteSuccessMessage": "Membres du groupe privé invités avec succès",
+  "notificationForConvo": "Notifications",
+  "notificationForConvo_all": "Toutes",
+  "notificationForConvo_disabled": "Désactivées",
+  "notificationForConvo_mentions_only": "Mentions seulement",
+  "onionPathIndicatorTitle": "Chemin",
+  "onionPathIndicatorDescription": "Session cache votre adresse IP en envoyant vos messages via plusieurs Nœuds de Service dans le réseau décentralisé de Session. Voici les pays via lesquels votre connexion est actuellement transmise :",
+  "unknownCountry": "Pays inconnu",
+  "device": "Appareil",
+  "destination": "Destination",
+  "learnMore": "Plus d'info",
+  "linkVisitWarningTitle": "Ouvrir cette page dans votre navigateur ?",
+  "linkVisitWarningMessage": "Êtes-vous sûr de vouloir ouvrir $url$ dans votre navigateur ?",
+  "open": "Ouvrir",
+  "audioMessageAutoplayTitle": "Lecture automatique des messages audio",
+  "audioMessageAutoplayDescription": "Jouer automatiquement les messages audio envoyés consécutivement",
+  "clickToTrustContact": "Cliquez pour télécharger cette pièce-jointe",
+  "trustThisContactDialogTitle": "Faire confiance à $name$ ?",
+  "trustThisContactDialogDescription": "Êtes-vous sûr de vouloir télécharger les médias envoyés par $name$ ?",
   "pinConversation": "Épingler la conversation",
-  "unpinConversation": "Défaire la conversation",
-  "pinConversationLimitTitle": "Limite de conversations épinglées",
-  "pinConversationLimitToastDescription": "Vous ne pouvez pas épingler plus de $number$ conversations"
+  "unpinConversation": "Désépingler la conversation",
+  "pinConversationLimitTitle": "Limite de conversation épinglée",
+  "pinConversationLimitToastDescription": "Vous pouvez seulement épingler $number$ conversations",
+  "latestUnreadIsAbove": "Le premier message non lu se situe au-dessus",
+  "sendRecoveryPhraseTitle": "Envoyer la phrase de récupération",
+  "sendRecoveryPhraseMessage": "Vous essayer actuellement d’envoyer votre phrase de récupération, qui peut être utilisée pour accéder a votre compte. Êtes-vous sûre de vouloir envoyer ce message ?",
+  "notificationSubtitle": "Notifications - $setting$"
 }
