--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -20,8 +20,6 @@
   "editMenuPasteAndMatchStyle": "הדבק והתאם סגנון",
   "editMenuDelete": "מחק",
   "editMenuSelectAll": "בחר הכל",
-  "editMenuStartSpeaking": "התחלת דיבור",
-  "editMenuStopSpeaking": "הפסקת דיבור",
   "windowMenuClose": "סגור חלון",
   "windowMenuMinimize": "מזער",
   "windowMenuZoom": "ריחוק",
@@ -31,29 +29,20 @@
   "viewMenuZoomOut": "התרחק",
   "viewMenuToggleFullScreen": "עורר מסך מלא",
   "viewMenuToggleDevTools": "עורר כלי מפתחים",
-  "menuSetupWithImport": "הגדר עם יבוא",
   "contextMenuNoSuggestions": "No Suggestions",
+  "openGroupInvitation": "Open group invitation",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "טוען...",
   "optimizingApplication": "ממטב יישום...",
-  "chooseDirectory": "בחר תיקייה",
   "done": "Done",
-  "loadDataHeader": "טען את הנתונים שלך",
-  "loadDataDescription": "הרגע עברת את תהליך היצוא, ואנשי הקשר וההודעות שלך ממתינים בסבלנות על המחשב שלך. בחר את התיקייה המכילה את נתוני Session השמורים שלך.",
-  "importChooserTitle": "בחר תיקייה עם נתונים מיוצאים",
-  "importErrorHeader": "משהו השתבש!",
-  "importingHeader": "טוען אנשי קשר והודעות",
-  "importErrorFirst": "וודא שבחרת את התיקייה הנכונה המכילה את נתוני Session השמורים שלך. שמה אמור להתחיל ב'יבוא Session'. אתה יכול גם לשמור עותק חדש של הנתונים שלך מתוך יישום Chrome.",
-  "importErrorSecond": "אם צעדים אלו לא עובדים עבורך, אנא הגש יומן תקלים (תצוגה -> יומן תקלים) כך שנוכל לעזור לך להיות מהוגר!",
-  "importAgain": "בחר תיקייה ונסה שוב",
-  "importCompleteHeader": "הצלחה!",
-  "importCompleteStartButton": "התחל להשתמש ב־Session Desktop עבודה",
-  "importCompleteLinkButton": "קשר מכשיר זה אל הטלפון שלך",
   "me": "אני",
   "view": "הצג",
   "youLeftTheGroup": "עזבת את הקבוצה",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "הודעה שלא נקראה 1",
-  "unreadMessages": "$count$ הודעות שלא נקראו",
+  "unreadMessage": "Unread Message",
+  "unreadMessages": "Unread Messages",
   "debugLogExplanation": "יומן זה יפורסם באופן ציבורי ומקוון לתורמים עבור צפייה, אתה יכול לבחון ולערוך אותו לפני הגשה.",
   "debugLogError": "משהו השתבש עם ההעלאה! אנא שקול להוסיף באופן ידני את יומן התקלים שלך לתקל שאתה מגיש.",
   "reportIssue": "דווח על סוגייה",
@@ -157,6 +146,8 @@
   "saved": "Saved",
   "permissions": "הרשאות",
   "general": "כללי",
+  "tookAScreenshot": "$name$ took a screenshot",
+  "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
   "linkPreviewDescription": "Previews are supported for most urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
@@ -210,6 +201,8 @@
   "disappearingMessages": "הודעות נעלמות",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear nickname",
+  "nicknamePlaceholder": "New Nickname",
+  "changeNicknameMessage": "Enter a nickname for this user",
   "timerOption_0_seconds_abbreviated": "כבוי",
   "timerOption_5_seconds_abbreviated": "5 ש'",
   "timerOption_10_seconds_abbreviated": "10 ש'",
@@ -231,6 +224,7 @@
   "hideMenuBarDescription": "Toggle system menu bar visibility",
   "startConversation": "התחל שיחה חדשה...",
   "invalidNumberError": "מספר בלתי תקף",
+  "failedResolveOns": "Failed to resolve ONS name",
   "successUnlinked": "Your device was unlinked successfully",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
@@ -253,6 +247,7 @@
   "blockUser": "Block",
   "unblockUser": "Unblock",
   "unblocked": "Unblocked",
+  "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked contacts",
   "unbanUser": "Unban User",
   "unbanUserConfirm": "Are you sure you want to unban user?",
@@ -260,6 +255,8 @@
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
   "banUserConfirm": "Are you sure you want to ban user?",
+  "banUserAndDeleteAll": "Ban and Delete All",
+  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "Leave Group",
@@ -268,9 +265,9 @@
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
   "cannotRemoveCreatorFromGroup": "Cannot remove this user",
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
-  "userNeedsToHaveJoined": "User needs to have joined",
-  "userNeedsToHaveJoinedDesc": "An error happened. The user needs to have already joined the server for this ADD to work.",
   "noContactsForGroup": "You don't have any contacts yet",
+  "failedToAddAsModerator": "Failed to add user as moderator",
+  "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
   "copyMessage": "Copy message text",
   "selectMessage": "Select message",
   "editGroup": "Edit group",
@@ -359,7 +356,7 @@
   "beginYourSession": "Begin<br />your<br />Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
-  "searchFor...": "Search for conversations, contacts, and messages",
+  "searchFor...": "Search for conversations or contacts",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
@@ -386,9 +383,41 @@
   "noBlockedContacts": "No blocked contacts",
   "userAddedToModerators": "User added to moderator list",
   "userRemovedFromModerators": "User removed from moderator list",
-  "errorHappenedWhileRemovingModerator": "An error happened",
-  "errorHappenedWhileRemovingModeratorDesc": "An error happened while removing this user from the moderator list.",
   "orJoinOneOfThese": "Or join one of these...",
   "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation"
+  "translation": "Translation",
+  "closedGroupInviteFailTitle": "Group Invitation Failed",
+  "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
+  "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
+  "closedGroupInviteFailMessagePlural": "Unable to successfully invite all group members",
+  "closedGroupInviteOkText": "Retry invitations",
+  "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
+  "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
+  "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
+  "notificationForConvo": "Notifications",
+  "notificationForConvo_all": "All",
+  "notificationForConvo_disabled": "Disabled",
+  "notificationForConvo_mentions_only": "Mentions only",
+  "onionPathIndicatorTitle": "Path",
+  "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
+  "unknownCountry": "Unknown Country",
+  "device": "Device",
+  "destination": "Destination",
+  "learnMore": "Learn more",
+  "linkVisitWarningTitle": "Open this link in your browser?",
+  "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
+  "open": "Open",
+  "audioMessageAutoplayTitle": "Audio Message Autoplay",
+  "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
+  "clickToTrustContact": "Click to download media",
+  "trustThisContactDialogTitle": "Trust $name$?",
+  "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
+  "pinConversation": "Pin Conversation",
+  "unpinConversation": "Unpin Conversation",
+  "pinConversationLimitTitle": "Pinned conversations limit",
+  "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "latestUnreadIsAbove": "First unread message is above",
+  "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
+  "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "notificationSubtitle": "Notifications - $setting$"
 }
