--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -1,10 +1,10 @@
 {
   "privacyPolicy": "Istilah & Kebijakan Privasi",
-  "copyErrorAndQuit": "Copy error and quit",
+  "copyErrorAndQuit": "Salin galat dan berhenti",
   "unknown": "Tidak dikenal",
-  "databaseError": "Database Error",
+  "databaseError": "Kesalahan database",
   "mainMenuFile": "&Berkas",
-  "mainMenuEdit": "&Edit",
+  "mainMenuEdit": "&Sunting",
   "mainMenuView": "&Lihat",
   "mainMenuWindow": "&Jendela",
   "mainMenuHelp": "&Bantuan",
@@ -20,8 +20,6 @@
   "editMenuPasteAndMatchStyle": "Tempelkan dan cocokkan model",
   "editMenuDelete": "Hapus",
   "editMenuSelectAll": "Pilih semua",
-  "editMenuStartSpeaking": "Mulai bicara",
-  "editMenuStopSpeaking": "Berhenti berbicara",
   "windowMenuClose": "Tutup Jendela",
   "windowMenuMinimize": "Kecilkan",
   "windowMenuZoom": "Perbesar",
@@ -31,35 +29,26 @@
   "viewMenuZoomOut": "Memperkecil",
   "viewMenuToggleFullScreen": "Toggle layar penuh",
   "viewMenuToggleDevTools": "Toggle perangkat pengembangan",
-  "menuSetupWithImport": "Siapkan dengan Impor",
-  "contextMenuNoSuggestions": "No Suggestions",
+  "contextMenuNoSuggestions": "Tidak ada sugesti",
+  "openGroupInvitation": "Undangan grup terbuka",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Bergabung ke $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Apakah anda yakin ingin bergabung ke grup terbuka $roomName$?",
+  "enterSessionIDOrONSName": "Masukkan Session ID atau nama ONS",
   "loading": "Memuat...",
   "optimizingApplication": "Mengoptimalkan aplikasi...",
-  "chooseDirectory": "Pilih map",
-  "done": "Done",
-  "loadDataHeader": "Memuat data Anda",
-  "loadDataDescription": "Anda telah melewati proses ekspor. Kontak dan pesan Anda sedang menanti dengan sabar di komputer. Pilih map berisikan data Session Anda.",
-  "importChooserTitle": "Pilih direktori dengan data telah diekspor",
-  "importErrorHeader": "Sesuatu berjalan keliru!",
-  "importingHeader": "Memuat kontak dan pesan",
-  "importErrorFirst": "Pastikan Anda memilih direktori tepat, yang berisi data Session yang telah tersimpan. Nama direktori itu seharusnya 'Expor Session'. Anda bisa juga membuat data salinan baru dari Chrome App.",
-  "importErrorSecond": "Jika langkah ini tidak berhasil bagi Anda, silakan masukkan catatan awakutu (Tampilan -> Catatan Awakutu) sehingga kami dapat membantu Anda untuk bermigrasi!",
-  "importAgain": "Pilih map dan coba lagi",
-  "importCompleteHeader": "Berhasil!",
-  "importCompleteStartButton": "Mulai menggunakan Session Desktop",
-  "importCompleteLinkButton": "Sambungkan perangkat ini dengan telpon Anda",
+  "done": "Selesai",
   "me": "Saya",
   "view": "Lihat",
   "youLeftTheGroup": "Anda telah keluar dari grup.",
-  "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "1 Pesan Belum Dibaca",
-  "unreadMessages": "$count$ pesan belum dibaca",
+  "youGotKickedFromGroup": "Anda dikeluarkan dari grup.",
+  "unreadMessage": "Unread Message",
+  "unreadMessages": "Unread Messages",
   "debugLogExplanation": "Catatan ini akan diunggah secara publik agar kontributor dapat melihat. Anda dapat memeriksa kembali dan menyunting sebelum mengunggahnya.",
   "debugLogError": "Terjadi kesalahan ketika mengunggah! Harap perhatikan manual menambahkan catatan bug dalam file Anda. ",
   "reportIssue": "Laporkan masalah",
   "gotIt": "Paham",
   "submit": "Kirim",
-  "markAllAsRead": "Mark All as Read",
+  "markAllAsRead": "Tandai semuanya telah dibaca",
   "incomingError": "Gagal dalam menangani pesan masuk",
   "media": "Media",
   "mediaEmptyState": "Tidak ada media",
@@ -157,6 +146,8 @@
   "saved": "Saved",
   "permissions": "Perizinan",
   "general": "Umum",
+  "tookAScreenshot": "$name$ took a screenshot",
+  "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Kirim pratinjau tautan",
   "linkPreviewDescription": "Previews are supported for most urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
@@ -210,6 +201,8 @@
   "disappearingMessages": "Pesan hilang",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear nickname",
+  "nicknamePlaceholder": "New Nickname",
+  "changeNicknameMessage": "Enter a nickname for this user",
   "timerOption_0_seconds_abbreviated": "padam",
   "timerOption_5_seconds_abbreviated": "5d",
   "timerOption_10_seconds_abbreviated": "10d",
@@ -231,6 +224,7 @@
   "hideMenuBarDescription": "Toggle system menu bar visibility",
   "startConversation": "Start new conversation…",
   "invalidNumberError": "Nomor salah",
+  "failedResolveOns": "Failed to resolve ONS name",
   "successUnlinked": "Sukses memutus koneksi perangkat",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
@@ -253,6 +247,7 @@
   "blockUser": "Blokir",
   "unblockUser": "Buka blokir",
   "unblocked": "Unblocked",
+  "blocked": "Blocked",
   "blockedSettingsTitle": "Kontak yang diblokir",
   "unbanUser": "Unban User",
   "unbanUserConfirm": "Are you sure you want to unban user?",
@@ -260,6 +255,8 @@
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
   "banUserConfirm": "Are you sure you want to ban user?",
+  "banUserAndDeleteAll": "Ban and Delete All",
+  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "Keluar grup",
@@ -268,9 +265,9 @@
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
   "cannotRemoveCreatorFromGroup": "Cannot remove this user",
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
-  "userNeedsToHaveJoined": "User needs to have joined",
-  "userNeedsToHaveJoinedDesc": "An error happened. The user needs to have already joined the server for this ADD to work.",
   "noContactsForGroup": "anda belum memiliki kontak",
+  "failedToAddAsModerator": "Failed to add user as moderator",
+  "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
   "copyMessage": "Copy message text",
   "selectMessage": "Select message",
   "editGroup": "Ubah grup",
@@ -359,7 +356,7 @@
   "beginYourSession": "Begin<br />your<br />Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "Session baru",
-  "searchFor...": "Cari untuk percakapan, daftar kontak dan pesan",
+  "searchFor...": "Search for conversations or contacts",
   "enterSessionID": "Masuk ke Session ID",
   "enterSessionIDOfRecipient": "Masukkan Session ID penerima",
   "usersCanShareTheir...": "Pengguna bisa membagikan Session ID miliknya dengan masuk ke pengaturan akun dan mengetuk \"Bagikan Session ID\" atau dengan membagikan kode QR mereka",
@@ -386,9 +383,41 @@
   "noBlockedContacts": "Tidak ada kontak yang diblokir",
   "userAddedToModerators": "User added to moderator list",
   "userRemovedFromModerators": "User removed from moderator list",
-  "errorHappenedWhileRemovingModerator": "An error happened",
-  "errorHappenedWhileRemovingModeratorDesc": "An error happened while removing this user from the moderator list.",
   "orJoinOneOfThese": "Or join one of these...",
   "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation"
+  "translation": "Translation",
+  "closedGroupInviteFailTitle": "Group Invitation Failed",
+  "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
+  "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
+  "closedGroupInviteFailMessagePlural": "Unable to successfully invite all group members",
+  "closedGroupInviteOkText": "Retry invitations",
+  "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
+  "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
+  "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
+  "notificationForConvo": "Notifications",
+  "notificationForConvo_all": "All",
+  "notificationForConvo_disabled": "Disabled",
+  "notificationForConvo_mentions_only": "Mentions only",
+  "onionPathIndicatorTitle": "Path",
+  "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
+  "unknownCountry": "Unknown Country",
+  "device": "Device",
+  "destination": "Destination",
+  "learnMore": "Learn more",
+  "linkVisitWarningTitle": "Open this link in your browser?",
+  "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
+  "open": "Open",
+  "audioMessageAutoplayTitle": "Audio Message Autoplay",
+  "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
+  "clickToTrustContact": "Click to download media",
+  "trustThisContactDialogTitle": "Trust $name$?",
+  "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
+  "pinConversation": "Pin Conversation",
+  "unpinConversation": "Unpin Conversation",
+  "pinConversationLimitTitle": "Pinned conversations limit",
+  "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "latestUnreadIsAbove": "First unread message is above",
+  "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
+  "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "notificationSubtitle": "Notifications - $setting$"
 }
