--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -20,8 +20,6 @@
   "editMenuPasteAndMatchStyle": "貼り付けてスタイルをマッチさせる",
   "editMenuDelete": "削除",
   "editMenuSelectAll": "すべて選択",
-  "editMenuStartSpeaking": "話し始める",
-  "editMenuStopSpeaking": "話し終わる",
   "windowMenuClose": "ウィンドウを閉じる",
   "windowMenuMinimize": "最小化する",
   "windowMenuZoom": "ズーム",
@@ -31,29 +29,20 @@
   "viewMenuZoomOut": "縮小",
   "viewMenuToggleFullScreen": "フルスクリーンを切り替える",
   "viewMenuToggleDevTools": "開発者ツールを切り替える",
-  "menuSetupWithImport": "インポートデータを使ってセットアップ",
   "contextMenuNoSuggestions": "No Suggestions",
+  "openGroupInvitation": "Open group invitation",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "読込中...",
   "optimizingApplication": "アプリケーションを最適化しています...",
-  "chooseDirectory": "フォルダを選択",
   "done": "Done",
-  "loadDataHeader": "データを読み込む",
-  "loadDataDescription": "Sessionの保存データが含まれたフォルダーを選択してください。",
-  "importChooserTitle": "エクスポートされたデータがあるフォルダを選んで下さい。",
-  "importErrorHeader": "エラーが発生しました。",
-  "importingHeader": "連絡先とメッセージを読み込み中",
-  "importErrorFirst": "正しいディレクトリを選択したか確認してください。ディレクトリ名は「Session Export」から始まります。なお、旧式のChromeアプリからもデータをコピーできます。",
-  "importErrorSecond": "もしこれらの方法がうまく作用しない場合、デバッグログを提出していただけると将来的な解決につながります!",
-  "importAgain": "フォルダーを選択して再度お試しください。",
-  "importCompleteHeader": "成功しました!",
-  "importCompleteStartButton": "Session Desktopを使い始める",
-  "importCompleteLinkButton": "この端末をモバイル端末とリンクする",
   "me": "自分",
   "view": "見る",
   "youLeftTheGroup": "グループを抜けました",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "$count$通の未読メッセージ",
-  "unreadMessages": "$count$通の未読メッセージ",
+  "unreadMessage": "Unread Message",
+  "unreadMessages": "Unread Messages",
   "debugLogExplanation": "このログはネット上に公開され，開発者が閲覧します。提出前に編集することができます。",
   "debugLogError": "アップロードには失敗ありました！手入力でログをバグ報告に付けることを考慮して下さい。",
   "reportIssue": "問題を報告",
@@ -157,6 +146,8 @@
   "saved": "Saved",
   "permissions": "アクセス許可",
   "general": "一般",
+  "tookAScreenshot": "$name$ took a screenshot",
+  "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "リンクプレビューを送る",
   "linkPreviewDescription": "プレビューはImgur、Instagram、Pinterest、RedditおよびYouTubeリンクをサポートしています",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
@@ -210,6 +201,8 @@
   "disappearingMessages": "消えるメッセージ",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear nickname",
+  "nicknamePlaceholder": "New Nickname",
+  "changeNicknameMessage": "Enter a nickname for this user",
   "timerOption_0_seconds_abbreviated": "オフ",
   "timerOption_5_seconds_abbreviated": "5秒",
   "timerOption_10_seconds_abbreviated": "10秒",
@@ -231,6 +224,7 @@
   "hideMenuBarDescription": "メニューバーの表示を切り替える",
   "startConversation": "Start new conversation…",
   "invalidNumberError": "不正な番号です",
+  "failedResolveOns": "Failed to resolve ONS name",
   "successUnlinked": "端末は正常にリンク解除されました",
   "autoUpdateSettingTitle": "自動更新",
   "autoUpdateSettingDescription": "起動時に自動的に更新の有無を確認する",
@@ -253,6 +247,7 @@
   "blockUser": "ブロック",
   "unblockUser": "ブロック解除",
   "unblocked": "Unblocked",
+  "blocked": "Blocked",
   "blockedSettingsTitle": "ブロックした連絡先",
   "unbanUser": "Unban User",
   "unbanUserConfirm": "Are you sure you want to unban user?",
@@ -260,6 +255,8 @@
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
   "banUserConfirm": "Are you sure you want to ban user?",
+  "banUserAndDeleteAll": "Ban and Delete All",
+  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "グループを抜ける",
@@ -268,9 +265,9 @@
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
   "cannotRemoveCreatorFromGroup": "Cannot remove this user",
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
-  "userNeedsToHaveJoined": "User needs to have joined",
-  "userNeedsToHaveJoinedDesc": "An error happened. The user needs to have already joined the server for this ADD to work.",
   "noContactsForGroup": "まだ連絡先がありません",
+  "failedToAddAsModerator": "Failed to add user as moderator",
+  "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
   "copyMessage": "Copy message text",
   "selectMessage": "メッセージを選択",
   "editGroup": "グループを編集する",
@@ -359,7 +356,7 @@
   "beginYourSession": "Begin<br />your<br />Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "新しいセッション",
-  "searchFor...": "会話やメッセージ、連絡先を検索します。",
+  "searchFor...": "Search for conversations or contacts",
   "enterSessionID": "Session ID を入力してください",
   "enterSessionIDOfRecipient": "受信者の Session ID を入力してください",
   "usersCanShareTheir...": "ユーザーは、アカウント設定に移動して「Session ID を共有」をタップするか、QR コードを共有することで、Session ID を共有できます。",
@@ -386,9 +383,41 @@
   "noBlockedContacts": "ブロックしている連絡先はありません",
   "userAddedToModerators": "User added to moderator list",
   "userRemovedFromModerators": "User removed from moderator list",
-  "errorHappenedWhileRemovingModerator": "An error happened",
-  "errorHappenedWhileRemovingModeratorDesc": "An error happened while removing this user from the moderator list.",
   "orJoinOneOfThese": "Or join one of these...",
   "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation"
+  "translation": "Translation",
+  "closedGroupInviteFailTitle": "Group Invitation Failed",
+  "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
+  "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
+  "closedGroupInviteFailMessagePlural": "Unable to successfully invite all group members",
+  "closedGroupInviteOkText": "Retry invitations",
+  "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
+  "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
+  "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
+  "notificationForConvo": "Notifications",
+  "notificationForConvo_all": "All",
+  "notificationForConvo_disabled": "Disabled",
+  "notificationForConvo_mentions_only": "Mentions only",
+  "onionPathIndicatorTitle": "Path",
+  "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
+  "unknownCountry": "Unknown Country",
+  "device": "Device",
+  "destination": "Destination",
+  "learnMore": "Learn more",
+  "linkVisitWarningTitle": "Open this link in your browser?",
+  "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
+  "open": "Open",
+  "audioMessageAutoplayTitle": "Audio Message Autoplay",
+  "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
+  "clickToTrustContact": "Click to download media",
+  "trustThisContactDialogTitle": "Trust $name$?",
+  "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
+  "pinConversation": "Pin Conversation",
+  "unpinConversation": "Unpin Conversation",
+  "pinConversationLimitTitle": "Pinned conversations limit",
+  "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "latestUnreadIsAbove": "First unread message is above",
+  "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
+  "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "notificationSubtitle": "Notifications - $setting$"
 }
