--- a/_locales/km/messages.json
+++ b/_locales/km/messages.json
@@ -20,8 +20,6 @@
   "editMenuPasteAndMatchStyle": "គំរូបិទភ្ជាប់ និងត្រូវគ្នា",
   "editMenuDelete": "លុប",
   "editMenuSelectAll": "ជ្រើសរើសទាំងអស់",
-  "editMenuStartSpeaking": "ចាប់ផ្តើមការនិយាយ",
-  "editMenuStopSpeaking": "បញ្ឈប់ការនិយាយ",
   "windowMenuClose": "បិទផ្ទាំង",
   "windowMenuMinimize": "បង្រួមតូច",
   "windowMenuZoom": "ពង្រីក",
@@ -31,29 +29,20 @@
   "viewMenuZoomOut": "បង្រួម",
   "viewMenuToggleFullScreen": "បិទបើកការបង្ហាញពេញអេក្រង់",
   "viewMenuToggleDevTools": "បិទបើកមុខងារអ្នកអភិវឌ្ឍន៍",
-  "menuSetupWithImport": "ដំឡើង ជាមួយការនាំចូល",
   "contextMenuNoSuggestions": "No Suggestions",
+  "openGroupInvitation": "Open group invitation",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "កំពុងផ្ទុក...",
   "optimizingApplication": "ធ្វើឱ្យកម្មវិធីប្រសើរឡើង ...",
-  "chooseDirectory": "ជ្រើសរើសទីតាំងផ្ទុក",
   "done": "Done",
-  "loadDataHeader": "ផ្ទុកទិន្នន័យរបស់អ្នក",
-  "loadDataDescription": "អ្នកទើបឆ្លងកាត់ដំណើការនាំចេញ បញ្ជីទំនាក់ទំនង និងសាររបស់អ្នកគឺកំពុងរង់ចាំនៅលើម៉ាស៊ីនកុំព្យូទ័ររបស់អ្នក។ ជ្រើសរើស ថតផ្ទុកទិន្នន័យSignalរបស់អ្នក ដែលបានរក្សាទុក។",
-  "importChooserTitle": "ជ្រើសរើស ថតឯកសារ ជាមួយទិន្នន័យបាននាំចេញ",
-  "importErrorHeader": "មានបញ្ហាខុសប្រក្រតី!",
-  "importingHeader": "កំពុងផ្ទុកបញ្ជីទំនាក់ទំនង និងសារ",
-  "importErrorFirst": "សូមប្រាកដថា អ្នកបានជ្រើសរើស កន្លែងត្រឹមត្រូវដែលផ្ទុកទិន្នន័យSignalរបស់អ្នក ដែលបានរក្សាទុក។ ឈ្មោះវា គួរតែចាប់ផ្តើមដោយ 'នាំចេញ Session។' អ្នកអាចរក្សាទុកការចម្លងថ្មីមួយនៃទិន្នន័យរបស់អ្នក ពីកម្មវិធី Chrome ។",
-  "importErrorSecond": "បើសិនជំហានទាំងនេះ មិនកើតទេ សូមបញ្ជូន កំណត់ត្រាបញ្ហា (បង្ហាញ -> កំណត់ត្រាបញ្ហា) ដូចនេះ យើងអាចជួយអ្នកបាន!",
-  "importAgain": "ជ្រើសរើស កន្លែងផ្ទុក និងសាកល្បងម្តងទៀត",
-  "importCompleteHeader": "ជោគជ័យ!",
-  "importCompleteStartButton": "ចាប់ផ្តើមប្រើប្រាស់ Session Desktop",
-  "importCompleteLinkButton": "តភ្ជាប់ឧបករណ៍នេះ ទៅកាន់ទូរស័ព្ទរបស់អ្នក",
   "me": "ខ្ញុំ",
   "view": "បង្ហាញ",
   "youLeftTheGroup": "អ្នកបានចាកចេញពីក្រុម",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "សារមិនទាន់អាន 1 ",
-  "unreadMessages": "$count$ សារមិនទាន់អាន",
+  "unreadMessage": "Unread Message",
+  "unreadMessages": "Unread Messages",
   "debugLogExplanation": "កំណត់ត្រានេះ នឹងត្រូវបង្ហោះជាសាធារណៈតាមរយៈបណ្តាញ សម្រាប់អ្នកចូលរួមដើម្បីពិនិត្យមើល។ អ្នកអាចពិនិត្យ និងកែប្រែវាមុនពេលបញ្ជូន។",
   "debugLogError": "មានបញ្ហាក្នុងការផ្ទុក! សូមបន្ថែមក្នុងកំណត់ត្រា ដើម្បីកត់ត្រាបញ្ហាក្នុងឯកសារអ្នក។",
   "reportIssue": "រាយការណ៍បញ្ហាមួយ",
@@ -157,6 +146,8 @@
   "saved": "Saved",
   "permissions": "ការអនុញ្ញាត",
   "general": "ទូទៅ",
+  "tookAScreenshot": "$name$ took a screenshot",
+  "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
   "linkPreviewDescription": "Previews are supported for most urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
@@ -210,6 +201,8 @@
   "disappearingMessages": "សារបាត់ទៅវិញ",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear nickname",
+  "nicknamePlaceholder": "New Nickname",
+  "changeNicknameMessage": "Enter a nickname for this user",
   "timerOption_0_seconds_abbreviated": "បិទ",
   "timerOption_5_seconds_abbreviated": "5វិ",
   "timerOption_10_seconds_abbreviated": "10វិ",
@@ -231,6 +224,7 @@
   "hideMenuBarDescription": "Toggle system menu bar visibility",
   "startConversation": "ចាប់ផ្តើមការសន្ទនាថ្មី...",
   "invalidNumberError": "លេខមិនត្រឹមត្រូវ",
+  "failedResolveOns": "Failed to resolve ONS name",
   "successUnlinked": "Your device was unlinked successfully",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
@@ -253,6 +247,7 @@
   "blockUser": "Block",
   "unblockUser": "Unblock",
   "unblocked": "Unblocked",
+  "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked contacts",
   "unbanUser": "Unban User",
   "unbanUserConfirm": "Are you sure you want to unban user?",
@@ -260,6 +255,8 @@
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
   "banUserConfirm": "Are you sure you want to ban user?",
+  "banUserAndDeleteAll": "Ban and Delete All",
+  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "Leave Group",
@@ -268,9 +265,9 @@
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
   "cannotRemoveCreatorFromGroup": "Cannot remove this user",
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
-  "userNeedsToHaveJoined": "User needs to have joined",
-  "userNeedsToHaveJoinedDesc": "An error happened. The user needs to have already joined the server for this ADD to work.",
   "noContactsForGroup": "You don't have any contacts yet",
+  "failedToAddAsModerator": "Failed to add user as moderator",
+  "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
   "copyMessage": "Copy message text",
   "selectMessage": "Select message",
   "editGroup": "Edit group",
@@ -359,7 +356,7 @@
   "beginYourSession": "Begin<br />your<br />Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
-  "searchFor...": "Search for conversations, contacts, and messages",
+  "searchFor...": "Search for conversations or contacts",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
@@ -386,9 +383,41 @@
   "noBlockedContacts": "No blocked contacts",
   "userAddedToModerators": "User added to moderator list",
   "userRemovedFromModerators": "User removed from moderator list",
-  "errorHappenedWhileRemovingModerator": "An error happened",
-  "errorHappenedWhileRemovingModeratorDesc": "An error happened while removing this user from the moderator list.",
   "orJoinOneOfThese": "Or join one of these...",
   "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation"
+  "translation": "Translation",
+  "closedGroupInviteFailTitle": "Group Invitation Failed",
+  "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
+  "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
+  "closedGroupInviteFailMessagePlural": "Unable to successfully invite all group members",
+  "closedGroupInviteOkText": "Retry invitations",
+  "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
+  "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
+  "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
+  "notificationForConvo": "Notifications",
+  "notificationForConvo_all": "All",
+  "notificationForConvo_disabled": "Disabled",
+  "notificationForConvo_mentions_only": "Mentions only",
+  "onionPathIndicatorTitle": "Path",
+  "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
+  "unknownCountry": "Unknown Country",
+  "device": "Device",
+  "destination": "Destination",
+  "learnMore": "Learn more",
+  "linkVisitWarningTitle": "Open this link in your browser?",
+  "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
+  "open": "Open",
+  "audioMessageAutoplayTitle": "Audio Message Autoplay",
+  "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
+  "clickToTrustContact": "Click to download media",
+  "trustThisContactDialogTitle": "Trust $name$?",
+  "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
+  "pinConversation": "Pin Conversation",
+  "unpinConversation": "Unpin Conversation",
+  "pinConversationLimitTitle": "Pinned conversations limit",
+  "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "latestUnreadIsAbove": "First unread message is above",
+  "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
+  "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "notificationSubtitle": "Notifications - $setting$"
 }
