--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -1,14 +1,14 @@
 {
-  "privacyPolicy": "Terms & Privacy Policy",
-  "copyErrorAndQuit": "Copy error and quit",
-  "unknown": "Unknown",
-  "databaseError": "Database Error",
-  "mainMenuFile": "&File",
-  "mainMenuEdit": "&Edit",
-  "mainMenuView": "&View",
-  "mainMenuWindow": "&Window",
-  "mainMenuHelp": "&Help",
-  "appMenuHide": "Hide",
+  "privacyPolicy": "이용약관 및 개인정보 보호 정책",
+  "copyErrorAndQuit": "복사 오류 및 종료",
+  "unknown": "알려지지 않음",
+  "databaseError": "데이터베이스 오류",
+  "mainMenuFile": "&파일",
+  "mainMenuEdit": "편집",
+  "mainMenuView": "보기",
+  "mainMenuWindow": "창",
+  "mainMenuHelp": "도움말",
+  "appMenuHide": "숨기기",
   "appMenuHideOthers": "Hide Others",
   "appMenuUnhide": "Show All",
   "appMenuQuit": "Quit Session",
@@ -20,8 +20,6 @@
   "editMenuPasteAndMatchStyle": "Paste and Match Style",
   "editMenuDelete": "Delete",
   "editMenuSelectAll": "Select All",
-  "editMenuStartSpeaking": "Start speaking",
-  "editMenuStopSpeaking": "Stop speaking",
   "windowMenuClose": "Close Window",
   "windowMenuMinimize": "Minimize",
   "windowMenuZoom": "Zoom",
@@ -31,28 +29,19 @@
   "viewMenuZoomOut": "Zoom Out",
   "viewMenuToggleFullScreen": "Toggle Full Screen",
   "viewMenuToggleDevTools": "Toggle Developer Tools",
-  "menuSetupWithImport": "Set Up with Import",
   "contextMenuNoSuggestions": "No Suggestions",
+  "openGroupInvitation": "Open group invitation",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "Loading...",
   "optimizingApplication": "Optimizing application...",
-  "chooseDirectory": "Choose folder",
   "done": "Done",
-  "loadDataHeader": "Load your data",
-  "loadDataDescription": "You've just gone through the export process, and your contacts and messages are waiting patiently on your computer. Select the folder that contains your saved Session data.",
-  "importChooserTitle": "Choose directory with exported data",
-  "importErrorHeader": "Something went wrong!",
-  "importingHeader": "Loading contacts and messages",
-  "importErrorFirst": "Make sure you have chosen the correct directory that contains your saved Session data. Its name should begin with 'Session Export.' You can also save a new copy of your data from the Chrome App.",
-  "importErrorSecond": "If these steps don't work for you, please submit a debug log (View -> Debug Log) so that we can help you get migrated!",
-  "importAgain": "Choose folder and try again",
-  "importCompleteHeader": "Success!",
-  "importCompleteStartButton": "Start using Session Desktop",
-  "importCompleteLinkButton": "Link this device to your phone",
   "me": "Me",
   "view": "View",
   "youLeftTheGroup": "You left the group",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "1 Unread Message",
+  "unreadMessage": "Unread Message",
   "unreadMessages": "Unread Messages",
   "debugLogExplanation": "This log will be posted publicly online for contributors to view. You may examine and edit it before submitting.",
   "debugLogError": "Something went wrong with the upload! Please consider manually adding your log to the bug you file.",
@@ -65,7 +54,7 @@
   "mediaEmptyState": "You don’t have any media in this conversation",
   "documents": "Documents",
   "documentsEmptyState": "You don’t have any documents in this conversation",
-  "today": "Today",
+  "today": "오늘",
   "yesterday": "Yesterday",
   "thisWeek": "This Week",
   "thisMonth": "This Month",
@@ -114,30 +103,30 @@
   "photo": "Photo",
   "cannotUpdate": "Cannot Update",
   "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
-  "ok": "OK",
-  "cancel": "Cancel",
-  "close": "Close",
-  "continue": "Continue",
+  "ok": "예",
+  "cancel": "취소",
+  "close": "닫기",
+  "continue": "계속",
   "error": "에러",
-  "delete": "Delete",
+  "delete": "지우기",
   "deletePublicWarning": "Are you sure? This will permanently remove this message for everyone in this open group.",
   "deleteMultiplePublicWarning": "Are you sure? This will permanently remove these messages for everyone in this open group.",
-  "deleteWarning": "Are you sure? Clicking 'delete' will permanently remove this message from this device only.",
-  "deleteMultipleWarning": "Are you sure? Clicking 'delete' will permanently remove these messages from this device only.",
+  "deleteWarning": "경고 지우기",
+  "deleteMultipleWarning": "여러 개의 경고를 지우기",
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
   "deleteThisMessage": "Delete this message",
   "deleted": "Deleted",
   "from": "From",
   "to": "to",
-  "sent": "Sent",
-  "received": "Received",
+  "sent": "전송됨",
+  "received": "수신됨",
   "sendMessage": "메세지를 보내다",
-  "groupMembers": "Group members",
-  "moreInformation": "More information",
-  "resend": "Resend",
-  "deleteMessage": "Delete Message",
+  "groupMembers": "그룹 구성원",
+  "moreInformation": "더 많은 정보",
+  "resend": "재전송",
+  "deleteMessage": "메시지 지우기",
   "deleteMessages": "Delete messages",
-  "deleteMessageForEveryone": "Delete Message For Everyone",
+  "deleteMessageForEveryone": "모두에게서 메시지 지우기",
   "deleteMessagesForEveryone": "Delete Messages For Everyone",
   "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Permanently delete this conversation?",
@@ -157,6 +146,8 @@
   "saved": "Saved",
   "permissions": "Permissions",
   "general": "일반 설정",
+  "tookAScreenshot": "$name$ took a screenshot",
+  "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
   "linkPreviewDescription": "Previews are supported for most urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
@@ -165,7 +156,7 @@
   "spellCheckTitle": "Spell Check",
   "spellCheckDescription": "Enable spell check of text entered in message composition box",
   "spellCheckDirty": "You must restart Session to apply your new settings",
-  "notifications": "Notifications",
+  "notifications": "알림",
   "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
   "readReceiptSettingTitle": "Read Receipts",
   "typingIndicatorsSettingDescription": "See and share when messages are being typed (applies to all sessions).",
@@ -177,41 +168,43 @@
   "noNameOrMessage": "Neither name nor message",
   "nameOnly": "Only sender name",
   "newMessage": "New Message",
-  "newMessages": "New Messages",
+  "newMessages": "새로운 메시지",
   "notificationMostRecentFrom": "Most recent from:",
-  "notificationFrom": "From:",
-  "notificationMostRecent": "Most recent:",
+  "notificationFrom": "보낸 사람:",
+  "notificationMostRecent": "최신글",
   "sendFailed": "Send failed",
   "expiredWarning": "This version of Session Desktop has expired. Please upgrade to the latest version to continue messaging.",
-  "upgrade": "Upgrade",
-  "mediaMessage": "Media message",
+  "upgrade": "업그레이드",
+  "mediaMessage": "멀티미디어 메시지",
   "timestamp_s": "now",
-  "timestamp_m": "1 minute",
-  "timestamp_h": "1 hour",
+  "timestamp_m": "1분",
+  "timestamp_h": "1 시간",
   "timestampFormat_M": "MMM D",
-  "messageBodyMissing": "Please enter a message body.",
-  "unblockToSend": "Unblock this contact to send a message.",
+  "messageBodyMissing": "메시지를 입력하세요.",
+  "unblockToSend": "보내기 차단 해제하기",
   "unblockGroupToSend": "Unblock this group to send a message.",
   "youChangedTheTimer": "You set the disappearing message timer to $time$",
   "timerSetOnSync": "Updated disappearing message timer to $time$",
   "theyChangedTheTimer": "$name$ set the disappearing message timer to $time$",
   "timerOption_0_seconds": "off",
-  "timerOption_5_seconds": "5 seconds",
-  "timerOption_10_seconds": "10 seconds",
-  "timerOption_30_seconds": "30 seconds",
-  "timerOption_1_minute": "1 minute",
-  "timerOption_5_minutes": "5 minutes",
-  "timerOption_30_minutes": "30 minutes",
-  "timerOption_1_hour": "1 hour",
+  "timerOption_5_seconds": "5초",
+  "timerOption_10_seconds": "10초",
+  "timerOption_30_seconds": "30초",
+  "timerOption_1_minute": "1분",
+  "timerOption_5_minutes": "5 분",
+  "timerOption_30_minutes": "30 분",
+  "timerOption_1_hour": "1 시간",
   "timerOption_6_hours": "6 hours",
   "timerOption_12_hours": "12 hours",
-  "timerOption_1_day": "1 day",
-  "timerOption_1_week": "1 week",
-  "disappearingMessages": "Disappearing messages",
-  "changeNickname": "Change Nickname",
+  "timerOption_1_day": "1일",
+  "timerOption_1_week": "1주",
+  "disappearingMessages": "사라지는 메시지",
+  "changeNickname": "닉네임 변경",
   "clearNickname": "Clear nickname",
-  "timerOption_0_seconds_abbreviated": "off",
-  "timerOption_5_seconds_abbreviated": "5s",
+  "nicknamePlaceholder": "새로운 닉네임",
+  "changeNicknameMessage": "닉네임 입력하여 검색하기",
+  "timerOption_0_seconds_abbreviated": "끄기",
+  "timerOption_5_seconds_abbreviated": "5초",
   "timerOption_10_seconds_abbreviated": "10s",
   "timerOption_30_seconds_abbreviated": "30s",
   "timerOption_1_minute_abbreviated": "1m",
@@ -231,6 +224,7 @@
   "hideMenuBarDescription": "Toggle system menu bar visibility",
   "startConversation": "Start new conversation…",
   "invalidNumberError": "Invalid number",
+  "failedResolveOns": "Failed to resolve ONS name",
   "successUnlinked": "Your device was unlinked successfully",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
@@ -253,27 +247,30 @@
   "blockUser": "Block",
   "unblockUser": "Unblock",
   "unblocked": "Unblocked",
+  "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked contacts",
-  "unbanUser": "Unban User",
+  "unbanUser": "사용자 금지 해제",
   "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "User unbanned successfully",
-  "userUnbanFailed": "Unban failed!",
-  "banUser": "Ban User",
+  "userUnbanFailed": "차단 해제 실폐",
+  "banUser": "금지된 사용자",
   "banUserConfirm": "Are you sure you want to ban user?",
+  "banUserAndDeleteAll": "Ban and Delete All",
+  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
-  "userBanFailed": "Ban failed!",
+  "userBanFailed": "차단 해제 실폐",
   "leaveGroup": "Leave Group",
   "leaveAndRemoveForEveryone": "Leave Group and remove for everyone",
   "leaveGroupConfirmation": "Are you sure you want to leave this group?",
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
   "cannotRemoveCreatorFromGroup": "Cannot remove this user",
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
-  "userNeedsToHaveJoined": "User needs to have joined",
-  "userNeedsToHaveJoinedDesc": "An error happened. The user needs to have already joined the server for this ADD to work.",
   "noContactsForGroup": "You don't have any contacts yet",
-  "copyMessage": "Copy message text",
+  "failedToAddAsModerator": "중재자로서 유저 추가하기 실패",
+  "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
+  "copyMessage": "메세지 글자 복사",
   "selectMessage": "Select message",
-  "editGroup": "Edit group",
+  "editGroup": "그룹 편집",
   "editGroupName": "Edit group name",
   "updateGroupDialogTitle": "Updating $name$...",
   "showRecoveryPhrase": "Recovery Phrase",
@@ -359,7 +356,7 @@
   "beginYourSession": "Begin<br />your<br />Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
-  "searchFor...": "Search for conversations, contacts, and messages",
+  "searchFor...": "Search for conversations or contacts",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
@@ -386,9 +383,41 @@
   "noBlockedContacts": "No blocked contacts",
   "userAddedToModerators": "User added to moderator list",
   "userRemovedFromModerators": "User removed from moderator list",
-  "errorHappenedWhileRemovingModerator": "An error happened",
-  "errorHappenedWhileRemovingModeratorDesc": "An error happened while removing this user from the moderator list.",
   "orJoinOneOfThese": "Or join one of these...",
   "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation"
+  "translation": "Translation",
+  "closedGroupInviteFailTitle": "Group Invitation Failed",
+  "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
+  "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
+  "closedGroupInviteFailMessagePlural": "Unable to successfully invite all group members",
+  "closedGroupInviteOkText": "Retry invitations",
+  "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
+  "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
+  "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
+  "notificationForConvo": "Notifications",
+  "notificationForConvo_all": "All",
+  "notificationForConvo_disabled": "Disabled",
+  "notificationForConvo_mentions_only": "Mentions only",
+  "onionPathIndicatorTitle": "Path",
+  "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
+  "unknownCountry": "Unknown Country",
+  "device": "Device",
+  "destination": "Destination",
+  "learnMore": "Learn more",
+  "linkVisitWarningTitle": "Open this link in your browser?",
+  "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
+  "open": "Open",
+  "audioMessageAutoplayTitle": "Audio Message Autoplay",
+  "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
+  "clickToTrustContact": "Click to download media",
+  "trustThisContactDialogTitle": "Trust $name$?",
+  "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
+  "pinConversation": "Pin Conversation",
+  "unpinConversation": "Unpin Conversation",
+  "pinConversationLimitTitle": "Pinned conversations limit",
+  "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "latestUnreadIsAbove": "First unread message is above",
+  "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
+  "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "notificationSubtitle": "Notifications - $setting$"
 }
