--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -20,8 +20,6 @@
   "editMenuPasteAndMatchStyle": "Вставить текст из буфера обмена",
   "editMenuDelete": "Удалить",
   "editMenuSelectAll": "Выбрать Все",
-  "editMenuStartSpeaking": "Начать диктовку",
-  "editMenuStopSpeaking": "Остановить диктовку",
   "windowMenuClose": "Закрыть окно",
   "windowMenuMinimize": "Минимизировать",
   "windowMenuZoom": "Увеличить",
@@ -31,29 +29,20 @@
   "viewMenuZoomOut": "Уменьшить",
   "viewMenuToggleFullScreen": "Переключить полный экран",
   "viewMenuToggleDevTools": "Переключить инструменты разработчика",
-  "menuSetupWithImport": "Настроить с импортом",
   "contextMenuNoSuggestions": "No Suggestions",
+  "openGroupInvitation": "Open group invitation",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "Загрузка...",
   "optimizingApplication": "Оптимизация приложения...",
-  "chooseDirectory": "Выберите папку",
   "done": "Done",
-  "loadDataHeader": "Загрузите свои данные",
-  "loadDataDescription": "Вы только что прошли процесс экспорта, и ваши контакты и сообщения терпеливо ждут вас на вашем компьютере. Выберите папку, содержащую сохраненные данные Session.",
-  "importChooserTitle": "Выберите каталог с экспортированными данными",
-  "importErrorHeader": "Что-то пошло не так!",
-  "importingHeader": "Загрузка контактов и сообщений",
-  "importErrorFirst": "Убедитесь, что выбран правильный каталог, содержащий сохраненные вами данные Session. Его название должно начинаться с 'Session Export'. Также вы можете сохранить новую копию своих данных из приложения Chrome.",
-  "importErrorSecond": "Если эти шаги вам не помогут, отправьте журнал отладки (Вид -> Журнал отладки), чтобы мы могли помочь вам перенастроить!",
-  "importAgain": "Выберите папку и повторите попытку.",
-  "importCompleteHeader": "Успех!",
-  "importCompleteStartButton": "Начните использовать Session Desktop",
-  "importCompleteLinkButton": "Свяжите это устройство с телефоном",
   "me": "Я",
   "view": "Просмотреть",
   "youLeftTheGroup": "Вы покинули группу.",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "$count$ Непрочитанное Сообщение",
-  "unreadMessages": "Непрочитанных Сообщений: $count$",
+  "unreadMessage": "Unread Message",
+  "unreadMessages": "Unread Messages",
   "debugLogExplanation": "Этот журнал отладки будет открыто опубликован для разработчиков. Вы можете проверить и изменить его перед отправкой.",
   "debugLogError": "Что-то пошло не так с загрузкой! Пожалуйста, подумайте о том, чтобы вручную добавить журнал к вашей ошибке.",
   "reportIssue": "Сообщить о проблеме",
@@ -157,6 +146,8 @@
   "saved": "Saved",
   "permissions": "Разрешения",
   "general": "Общие",
+  "tookAScreenshot": "$name$ took a screenshot",
+  "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Отправлять Предпросмотр Ссылки",
   "linkPreviewDescription": "Previews are supported for most urls.",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
@@ -210,6 +201,8 @@
   "disappearingMessages": "Исчезающие сообщения",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear nickname",
+  "nicknamePlaceholder": "New Nickname",
+  "changeNicknameMessage": "Enter a nickname for this user",
   "timerOption_0_seconds_abbreviated": "выключена",
   "timerOption_5_seconds_abbreviated": "5с",
   "timerOption_10_seconds_abbreviated": "10с",
@@ -231,6 +224,7 @@
   "hideMenuBarDescription": "Спрятать или показать системное меню",
   "startConversation": "Начать новый разговор…",
   "invalidNumberError": "Неверный номер",
+  "failedResolveOns": "Failed to resolve ONS name",
   "successUnlinked": "Ваше устройство успешно отвязано",
   "autoUpdateSettingTitle": "Автоматические обновления",
   "autoUpdateSettingDescription": "Автоматически проверять на наличие обновлений при запуске",
@@ -253,6 +247,7 @@
   "blockUser": "Заблокировать",
   "unblockUser": "Разблокировать",
   "unblocked": "Unblocked",
+  "blocked": "Blocked",
   "blockedSettingsTitle": "Заблокированные контакты",
   "unbanUser": "Unban User",
   "unbanUserConfirm": "Are you sure you want to unban user?",
@@ -260,6 +255,8 @@
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
   "banUserConfirm": "Are you sure you want to ban user?",
+  "banUserAndDeleteAll": "Ban and Delete All",
+  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "Покинуть Группу",
@@ -268,9 +265,9 @@
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
   "cannotRemoveCreatorFromGroup": "Cannot remove this user",
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
-  "userNeedsToHaveJoined": "User needs to have joined",
-  "userNeedsToHaveJoinedDesc": "An error happened. The user needs to have already joined the server for this ADD to work.",
   "noContactsForGroup": "У вас еще нет контактов",
+  "failedToAddAsModerator": "Failed to add user as moderator",
+  "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
   "copyMessage": "Скопировать текст сообщения",
   "selectMessage": "Выбрать сообщение",
   "editGroup": "Редактировать группу",
@@ -359,7 +356,7 @@
   "beginYourSession": "Begin<br />your<br />Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "Новый Диалог",
-  "searchFor...": "Поиск по разговорам, контактам и сообщениям",
+  "searchFor...": "Search for conversations or contacts",
   "enterSessionID": "Введите Session ID",
   "enterSessionIDOfRecipient": "Введите Session ID получателя",
   "usersCanShareTheir...": "Пользователи могут поделиться своим Session ID, зайдя в настройки своей учетной записи и нажав «Отправить Session ID», или поделившись своим QR-кодом.",
@@ -386,9 +383,41 @@
   "noBlockedContacts": "No blocked contacts",
   "userAddedToModerators": "User added to moderator list",
   "userRemovedFromModerators": "User removed from moderator list",
-  "errorHappenedWhileRemovingModerator": "An error happened",
-  "errorHappenedWhileRemovingModeratorDesc": "An error happened while removing this user from the moderator list.",
   "orJoinOneOfThese": "Or join one of these...",
   "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation"
+  "translation": "Translation",
+  "closedGroupInviteFailTitle": "Group Invitation Failed",
+  "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
+  "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
+  "closedGroupInviteFailMessagePlural": "Unable to successfully invite all group members",
+  "closedGroupInviteOkText": "Retry invitations",
+  "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
+  "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
+  "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
+  "notificationForConvo": "Notifications",
+  "notificationForConvo_all": "All",
+  "notificationForConvo_disabled": "Disabled",
+  "notificationForConvo_mentions_only": "Mentions only",
+  "onionPathIndicatorTitle": "Path",
+  "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
+  "unknownCountry": "Unknown Country",
+  "device": "Device",
+  "destination": "Destination",
+  "learnMore": "Learn more",
+  "linkVisitWarningTitle": "Open this link in your browser?",
+  "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
+  "open": "Open",
+  "audioMessageAutoplayTitle": "Audio Message Autoplay",
+  "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
+  "clickToTrustContact": "Click to download media",
+  "trustThisContactDialogTitle": "Trust $name$?",
+  "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
+  "pinConversation": "Pin Conversation",
+  "unpinConversation": "Unpin Conversation",
+  "pinConversationLimitTitle": "Pinned conversations limit",
+  "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "latestUnreadIsAbove": "First unread message is above",
+  "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
+  "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "notificationSubtitle": "Notifications - $setting$"
 }
