--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -20,8 +20,6 @@
   "editMenuPasteAndMatchStyle": "Yapıştır ve Stille Eşleştir",
   "editMenuDelete": "Sil",
   "editMenuSelectAll": "Tümünü Seç",
-  "editMenuStartSpeaking": "Konuşmaya başla",
-  "editMenuStopSpeaking": "Konuşmayı durdur",
   "windowMenuClose": "Pencereyi Kapat",
   "windowMenuMinimize": "Küçült",
   "windowMenuZoom": "Yakınlaştır",
@@ -31,29 +29,20 @@
   "viewMenuZoomOut": "Uzaklaştır",
   "viewMenuToggleFullScreen": "Tam Ekranı Aç/Kapat",
   "viewMenuToggleDevTools": "Geliştirici Araçlarını Aç/Kapat",
-  "menuSetupWithImport": "İçe Aktarma seçeneği ile kur",
   "contextMenuNoSuggestions": "No Suggestions",
+  "openGroupInvitation": "Open group invitation",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "Yükleniyor...",
   "optimizingApplication": "Uygulama optimize ediliyor...",
-  "chooseDirectory": "Klasör seçin",
   "done": "Done",
-  "loadDataHeader": "Verilerinizi yükleyin",
-  "loadDataDescription": "Dışa aktarma işlemini tamamladınız ve kişileriniz ile iletileriniz sabırla  bilgisayarınızda bekliyor. Kaydettiğiniz Session verilerinizi içeren klasörü seçin.",
-  "importChooserTitle": "Dışa aktarılan verilerin bulunduğu dizini seçin",
-  "importErrorHeader": "Bir şeyler ters gitti!",
-  "importingHeader": "Kişiler ve iletiler yükleniyor",
-  "importErrorFirst": "Kaydedilmiş Session verilerinizi içeren doğru dizini seçtiğinizden emin olun. Dizinin ismi 'Session Export' ile başlamalı. Verinizin yeni bir kopyasını Chrome Uygulamasından kaydededebilirsiniz.",
-  "importErrorSecond": "Eğer bu adımlar işinize yaramadıysa, lütfen bir hata ayıklama günlüğü gönderin (Görüntüle -> Hata Ayıklama Günlüğü) ki aktarmanıza yardım edebilelim!",
-  "importAgain": "Klasör seçip tekrar deneyiniz",
-  "importCompleteHeader": "Başarılı!",
-  "importCompleteStartButton": "Session Desktop'ı kullanmaya başlayın",
-  "importCompleteLinkButton": "Bu cihazı telefonunuza bağlayın",
   "me": "Ben",
   "view": "Görüntüle",
   "youLeftTheGroup": "Gruptan ayrıldınız",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "1 Okunmamış İleti",
-  "unreadMessages": "$count$ Okunmamış İleti",
+  "unreadMessage": "Unread Message",
+  "unreadMessages": "Unread Messages",
   "debugLogExplanation": "Bu günlük katkıda bulunanların görebilmeleri için herkese açık bir şekilde gönderilecektir. Göndermeden önce inceleyip düzenleyebilirsiniz.",
   "debugLogError": "Yüklemede bir şeyler ters gitti! Lütfen günlüğü hazırlayacağınız hata kaydına kendiniz ekleyin.",
   "reportIssue": "Sorun bildir",
@@ -90,13 +79,13 @@
   "about": "About",
   "speech": "Konuşma",
   "show": "Göster",
-  "sessionMessenger": "Session",
+  "sessionMessenger": "oturum",
   "search": "Ara",
   "noSearchResults": "\"$searchTerm$\" için arama sonucu yok",
   "conversationsHeader": "Sohbetler",
   "contactsHeader": "Kişiler",
   "messagesHeader": "İletiler",
-  "settingsHeader": "Settings",
+  "settingsHeader": "Ayarlar",
   "typingAlt": "Bu sohbet için yazma animasyonu",
   "contactAvatarAlt": "$name$ kişisinin avatarı",
   "downloadAttachment": "Eklentiyi İndir",
@@ -105,7 +94,7 @@
   "originalMessageNotFound": "İletinin aslı bulunamadı",
   "originalMessageNotAvailable": "İletinin aslı artık mevcut değil",
   "messageFoundButNotLoaded": "İletinin aslı bulundu, ama yüklenmedi. Yüklemek için yukarıya kaydırın.",
-  "recording": "Recording",
+  "recording": "Kayıtlar",
   "you": "Siz",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Sesli iletiler göndermek için, Session Desktop'ın mikrofonunuza erişimine izin verin.",
@@ -117,7 +106,7 @@
   "ok": "TAMAM",
   "cancel": "İptal",
   "close": "Close",
-  "continue": "Continue",
+  "continue": "Devam Et",
   "error": "Hata",
   "delete": "Sil",
   "deletePublicWarning": "Are you sure? This will permanently remove this message for everyone in this open group.",
@@ -157,6 +146,8 @@
   "saved": "Saved",
   "permissions": "İzinler",
   "general": "Genel",
+  "tookAScreenshot": "$name$ took a screenshot",
+  "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
   "linkPreviewDescription": "Previews are supported for most urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
@@ -210,6 +201,8 @@
   "disappearingMessages": "Kaybolan iletiler",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear nickname",
+  "nicknamePlaceholder": "New Nickname",
+  "changeNicknameMessage": "Enter a nickname for this user",
   "timerOption_0_seconds_abbreviated": "kapalı",
   "timerOption_5_seconds_abbreviated": "5sn",
   "timerOption_10_seconds_abbreviated": "10sn",
@@ -231,6 +224,7 @@
   "hideMenuBarDescription": "Toggle system menu bar visibility",
   "startConversation": "Yeni sohbet başlat…",
   "invalidNumberError": "Geçersiz numara",
+  "failedResolveOns": "Failed to resolve ONS name",
   "successUnlinked": "Your device was unlinked successfully",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
@@ -253,6 +247,7 @@
   "blockUser": "Block",
   "unblockUser": "Unblock",
   "unblocked": "Unblocked",
+  "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked contacts",
   "unbanUser": "Unban User",
   "unbanUserConfirm": "Are you sure you want to unban user?",
@@ -260,6 +255,8 @@
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
   "banUserConfirm": "Are you sure you want to ban user?",
+  "banUserAndDeleteAll": "Ban and Delete All",
+  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "Leave Group",
@@ -268,9 +265,9 @@
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
   "cannotRemoveCreatorFromGroup": "Cannot remove this user",
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
-  "userNeedsToHaveJoined": "User needs to have joined",
-  "userNeedsToHaveJoinedDesc": "An error happened. The user needs to have already joined the server for this ADD to work.",
   "noContactsForGroup": "You don't have any contacts yet",
+  "failedToAddAsModerator": "Failed to add user as moderator",
+  "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
   "copyMessage": "Copy message text",
   "selectMessage": "Select message",
   "editGroup": "Edit group",
@@ -359,7 +356,7 @@
   "beginYourSession": "Begin<br />your<br />Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
-  "searchFor...": "Search for conversations, contacts, and messages",
+  "searchFor...": "Search for conversations or contacts",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
@@ -386,9 +383,41 @@
   "noBlockedContacts": "No blocked contacts",
   "userAddedToModerators": "User added to moderator list",
   "userRemovedFromModerators": "User removed from moderator list",
-  "errorHappenedWhileRemovingModerator": "An error happened",
-  "errorHappenedWhileRemovingModeratorDesc": "An error happened while removing this user from the moderator list.",
   "orJoinOneOfThese": "Or join one of these...",
   "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation"
+  "translation": "Translation",
+  "closedGroupInviteFailTitle": "Group Invitation Failed",
+  "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
+  "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
+  "closedGroupInviteFailMessagePlural": "Unable to successfully invite all group members",
+  "closedGroupInviteOkText": "Retry invitations",
+  "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
+  "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
+  "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
+  "notificationForConvo": "Notifications",
+  "notificationForConvo_all": "All",
+  "notificationForConvo_disabled": "Disabled",
+  "notificationForConvo_mentions_only": "Mentions only",
+  "onionPathIndicatorTitle": "Path",
+  "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
+  "unknownCountry": "Unknown Country",
+  "device": "Device",
+  "destination": "Destination",
+  "learnMore": "Learn more",
+  "linkVisitWarningTitle": "Open this link in your browser?",
+  "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
+  "open": "Open",
+  "audioMessageAutoplayTitle": "Audio Message Autoplay",
+  "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
+  "clickToTrustContact": "Click to download media",
+  "trustThisContactDialogTitle": "Trust $name$?",
+  "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
+  "pinConversation": "Pin Conversation",
+  "unpinConversation": "Unpin Conversation",
+  "pinConversationLimitTitle": "Pinned conversations limit",
+  "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "latestUnreadIsAbove": "First unread message is above",
+  "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
+  "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "notificationSubtitle": "Notifications - $setting$"
 }
