--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -20,8 +20,6 @@
   "editMenuPasteAndMatchStyle": "Paste and Match Style",
   "editMenuDelete": "Xóa",
   "editMenuSelectAll": "Chọn tất cả",
-  "editMenuStartSpeaking": "Start speaking",
-  "editMenuStopSpeaking": "Stop speaking",
   "windowMenuClose": "Close Window",
   "windowMenuMinimize": "Minimize",
   "windowMenuZoom": "Zoom",
@@ -31,29 +29,20 @@
   "viewMenuZoomOut": "Zoom Out",
   "viewMenuToggleFullScreen": "Toggle Full Screen",
   "viewMenuToggleDevTools": "Toggle Developer Tools",
-  "menuSetupWithImport": "Set Up with Import",
   "contextMenuNoSuggestions": "No Suggestions",
+  "openGroupInvitation": "Open group invitation",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "Loading...",
   "optimizingApplication": "Optimizing application...",
-  "chooseDirectory": "Choose folder",
   "done": "Done",
-  "loadDataHeader": "Load your data",
-  "loadDataDescription": "You've just gone through the export process, and your contacts and messages are waiting patiently on your computer. Select the folder that contains your saved Session data.",
-  "importChooserTitle": "Choose directory with exported data",
-  "importErrorHeader": "Something went wrong!",
-  "importingHeader": "Loading contacts and messages",
-  "importErrorFirst": "Make sure you have chosen the correct directory that contains your saved Session data. Its name should begin with 'Session Export.' You can also save a new copy of your data from the Chrome App.",
-  "importErrorSecond": "If these steps don't work for you, please submit a debug log (View -> Debug Log) so that we can help you get migrated!",
-  "importAgain": "Choose folder and try again",
-  "importCompleteHeader": "Success!",
-  "importCompleteStartButton": "Start using Session Desktop",
-  "importCompleteLinkButton": "Link this device to your phone",
   "me": "Me",
   "view": "View",
   "youLeftTheGroup": "Bạn đã rời nhóm.",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "1 tin nhắn chưa đọc",
-  "unreadMessages": "1$count$ Tin nhắn chưa đọc",
+  "unreadMessage": "Unread Message",
+  "unreadMessages": "Unread Messages",
   "debugLogExplanation": "Bản ghi này sẽ được đăng trực tuyến một cách công khai để những người đóng góp theo dõi. Bạn có thể kiểm tra và sửa đổi nó trước khi gửi đi.",
   "debugLogError": "Something went wrong with the upload! Please consider manually adding your log to the bug you file.",
   "reportIssue": "Báo lỗi",
@@ -157,6 +146,8 @@
   "saved": "Saved",
   "permissions": "Permissions",
   "general": "Tổng quát",
+  "tookAScreenshot": "$name$ took a screenshot",
+  "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
   "linkPreviewDescription": "Previews are supported for most urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
@@ -210,6 +201,8 @@
   "disappearingMessages": "Xóa (tự động) tin nhắn",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear nickname",
+  "nicknamePlaceholder": "New Nickname",
+  "changeNicknameMessage": "Enter a nickname for this user",
   "timerOption_0_seconds_abbreviated": "tắt",
   "timerOption_5_seconds_abbreviated": "5 giây",
   "timerOption_10_seconds_abbreviated": "10 giây",
@@ -231,6 +224,7 @@
   "hideMenuBarDescription": "Toggle system menu bar visibility",
   "startConversation": "Start new conversation…",
   "invalidNumberError": "Số không chính xác",
+  "failedResolveOns": "Failed to resolve ONS name",
   "successUnlinked": "Thiết bị của bạn đã được ngắt liên kết thành công",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
@@ -253,6 +247,7 @@
   "blockUser": "Chặn",
   "unblockUser": "Không chặn",
   "unblocked": "Unblocked",
+  "blocked": "Blocked",
   "blockedSettingsTitle": "Chặn các liên lạc",
   "unbanUser": "Unban User",
   "unbanUserConfirm": "Are you sure you want to unban user?",
@@ -260,6 +255,8 @@
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
   "banUserConfirm": "Are you sure you want to ban user?",
+  "banUserAndDeleteAll": "Ban and Delete All",
+  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "Rời nhóm",
@@ -268,9 +265,9 @@
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
   "cannotRemoveCreatorFromGroup": "Cannot remove this user",
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
-  "userNeedsToHaveJoined": "User needs to have joined",
-  "userNeedsToHaveJoinedDesc": "An error happened. The user needs to have already joined the server for this ADD to work.",
   "noContactsForGroup": "Bạn chưa có danh bạ nào",
+  "failedToAddAsModerator": "Failed to add user as moderator",
+  "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
   "copyMessage": "Copy message text",
   "selectMessage": "Select message",
   "editGroup": "Edit group",
@@ -359,7 +356,7 @@
   "beginYourSession": "Begin<br />your<br />Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "Session mới",
-  "searchFor...": "Search for conversations, contacts, and messages",
+  "searchFor...": "Search for conversations or contacts",
   "enterSessionID": "Nhập Session ID",
   "enterSessionIDOfRecipient": "Nhập Session ID của người nhận",
   "usersCanShareTheir...": "Người dùng có thể chia sẻ Session ID của mình bằng cách tới mục cài đặt tài khoản và chạm vào “Chia sẻ Session ID”, hoặc bằng cách chia sẻ mã QR của họ.",
@@ -386,9 +383,41 @@
   "noBlockedContacts": "No blocked contacts",
   "userAddedToModerators": "User added to moderator list",
   "userRemovedFromModerators": "User removed from moderator list",
-  "errorHappenedWhileRemovingModerator": "An error happened",
-  "errorHappenedWhileRemovingModeratorDesc": "An error happened while removing this user from the moderator list.",
   "orJoinOneOfThese": "Or join one of these...",
   "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation"
+  "translation": "Translation",
+  "closedGroupInviteFailTitle": "Group Invitation Failed",
+  "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
+  "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
+  "closedGroupInviteFailMessagePlural": "Unable to successfully invite all group members",
+  "closedGroupInviteOkText": "Retry invitations",
+  "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
+  "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
+  "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
+  "notificationForConvo": "Notifications",
+  "notificationForConvo_all": "All",
+  "notificationForConvo_disabled": "Disabled",
+  "notificationForConvo_mentions_only": "Mentions only",
+  "onionPathIndicatorTitle": "Path",
+  "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
+  "unknownCountry": "Unknown Country",
+  "device": "Device",
+  "destination": "Destination",
+  "learnMore": "Learn more",
+  "linkVisitWarningTitle": "Open this link in your browser?",
+  "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
+  "open": "Open",
+  "audioMessageAutoplayTitle": "Audio Message Autoplay",
+  "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
+  "clickToTrustContact": "Click to download media",
+  "trustThisContactDialogTitle": "Trust $name$?",
+  "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
+  "pinConversation": "Pin Conversation",
+  "unpinConversation": "Unpin Conversation",
+  "pinConversationLimitTitle": "Pinned conversations limit",
+  "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "latestUnreadIsAbove": "First unread message is above",
+  "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
+  "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "notificationSubtitle": "Notifications - $setting$"
 }
