--- a/_locales/eo/messages.json
+++ b/_locales/eo/messages.json
@@ -20,8 +20,6 @@
   "editMenuPasteAndMatchStyle": "Alglui nur tekston",
   "editMenuDelete": "Forigi",
   "editMenuSelectAll": "Elekti ĉion",
-  "editMenuStartSpeaking": "Komenci paroli",
-  "editMenuStopSpeaking": "Halti paroli",
   "windowMenuClose": "Fermi fenestron",
   "windowMenuMinimize": "Plejetigi",
   "windowMenuZoom": "Zomi",
@@ -31,29 +29,20 @@
   "viewMenuZoomOut": "Elzomi",
   "viewMenuToggleFullScreen": "Baskuligi plenekranan reĝimon",
   "viewMenuToggleDevTools": "Baskuligi programistajn ilojn",
-  "menuSetupWithImport": "Agordi kun importo",
   "contextMenuNoSuggestions": "No Suggestions",
+  "openGroupInvitation": "Open group invitation",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "Ŝargante…",
   "optimizingApplication": "Optimumigo de la aplikaĵo...",
-  "chooseDirectory": "Elekti dosierujon",
   "done": "Done",
-  "loadDataHeader": "Ŝargu viajn datumojn",
-  "loadDataDescription": "Vi ĵus plenumis la eksportan procezon, kaj viaj kontaktoj kaj mesaĝoj atendas pacience ĉe via komputilo. Elektu la dosierujon, kiu enhavas viajn konservitajn Session-datumojn.",
-  "importChooserTitle": "Elektu dosierujon kun eksportitaj datumoj",
-  "importErrorHeader": "Ho ve! Okazis eraro!",
-  "importingHeader": "Ŝargante kontaktojn kaj mesaĝojn",
-  "importErrorFirst": "Certigu, ke vi elektis la ĝustan dosierujon, kiu enhavas viajn konservitajn Session-datumojn. Ties nomo komencu per „Session Export“. Vi ankaŭ povas konservi novan kopion el viaj datumoj per la aplikaĵo Chrome.",
-  "importErrorSecond": "Se tiuj paŝoj ne funkcias, bv. sendi sencimigan protokolon (Vidi → Sencimiga protokolo), por ke ni helpu vin kun la transirado!",
-  "importAgain": "Elektu dosierujon kaj reprovu",
-  "importCompleteHeader": "Sukceso!",
-  "importCompleteStartButton": "Ekuzi Session Desktop",
-  "importCompleteLinkButton": "Ligi tiun ĉi aparaton al via poŝtelefono",
   "me": "Mi",
   "view": "Montri pli",
   "youLeftTheGroup": "Vi forlasis la grupon",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "1 nelegata mesaĝo",
-  "unreadMessages": "$count$ nelegataj mesaĝoj",
+  "unreadMessage": "Unread Message",
+  "unreadMessages": "Unread Messages",
   "debugLogExplanation": "Tiu protokolo estos afiŝita publike en la reto, por ke kontribuantoj vidu ĝin; vi povas revizii ĝin antaŭ ol sendi ĝin.",
   "debugLogError": "Eraro dum la alŝuto! Bv. konsideri mane aldoni la protokolo, al problemo, kiun vi raportas.",
   "reportIssue": "Raporti problemon",
@@ -157,6 +146,8 @@
   "saved": "Saved",
   "permissions": "Permesoj",
   "general": "Ĝenerala",
+  "tookAScreenshot": "$name$ took a screenshot",
+  "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
   "linkPreviewDescription": "Previews are supported for most urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
@@ -210,6 +201,8 @@
   "disappearingMessages": "Memviŝontaj mesaĝoj",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear nickname",
+  "nicknamePlaceholder": "New Nickname",
+  "changeNicknameMessage": "Enter a nickname for this user",
   "timerOption_0_seconds_abbreviated": "malŝaltita",
   "timerOption_5_seconds_abbreviated": "5s",
   "timerOption_10_seconds_abbreviated": "10s",
@@ -231,6 +224,7 @@
   "hideMenuBarDescription": "Toggle system menu bar visibility",
   "startConversation": "Krei novan interparolon...",
   "invalidNumberError": "Nevalida numero",
+  "failedResolveOns": "Failed to resolve ONS name",
   "successUnlinked": "Your device was unlinked successfully",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
@@ -253,6 +247,7 @@
   "blockUser": "Block",
   "unblockUser": "Unblock",
   "unblocked": "Unblocked",
+  "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked contacts",
   "unbanUser": "Unban User",
   "unbanUserConfirm": "Are you sure you want to unban user?",
@@ -260,6 +255,8 @@
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
   "banUserConfirm": "Are you sure you want to ban user?",
+  "banUserAndDeleteAll": "Ban and Delete All",
+  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "Leave Group",
@@ -268,9 +265,9 @@
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
   "cannotRemoveCreatorFromGroup": "Cannot remove this user",
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
-  "userNeedsToHaveJoined": "User needs to have joined",
-  "userNeedsToHaveJoinedDesc": "An error happened. The user needs to have already joined the server for this ADD to work.",
   "noContactsForGroup": "You don't have any contacts yet",
+  "failedToAddAsModerator": "Failed to add user as moderator",
+  "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
   "copyMessage": "Copy message text",
   "selectMessage": "Select message",
   "editGroup": "Edit group",
@@ -359,7 +356,7 @@
   "beginYourSession": "Begin<br />your<br />Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
-  "searchFor...": "Search for conversations, contacts, and messages",
+  "searchFor...": "Search for conversations or contacts",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
@@ -386,9 +383,41 @@
   "noBlockedContacts": "No blocked contacts",
   "userAddedToModerators": "User added to moderator list",
   "userRemovedFromModerators": "User removed from moderator list",
-  "errorHappenedWhileRemovingModerator": "An error happened",
-  "errorHappenedWhileRemovingModeratorDesc": "An error happened while removing this user from the moderator list.",
   "orJoinOneOfThese": "Or join one of these...",
   "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation"
+  "translation": "Translation",
+  "closedGroupInviteFailTitle": "Group Invitation Failed",
+  "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
+  "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
+  "closedGroupInviteFailMessagePlural": "Unable to successfully invite all group members",
+  "closedGroupInviteOkText": "Retry invitations",
+  "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
+  "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
+  "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
+  "notificationForConvo": "Notifications",
+  "notificationForConvo_all": "All",
+  "notificationForConvo_disabled": "Disabled",
+  "notificationForConvo_mentions_only": "Mentions only",
+  "onionPathIndicatorTitle": "Path",
+  "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
+  "unknownCountry": "Unknown Country",
+  "device": "Device",
+  "destination": "Destination",
+  "learnMore": "Learn more",
+  "linkVisitWarningTitle": "Open this link in your browser?",
+  "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
+  "open": "Open",
+  "audioMessageAutoplayTitle": "Audio Message Autoplay",
+  "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
+  "clickToTrustContact": "Click to download media",
+  "trustThisContactDialogTitle": "Trust $name$?",
+  "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
+  "pinConversation": "Pin Conversation",
+  "unpinConversation": "Unpin Conversation",
+  "pinConversationLimitTitle": "Pinned conversations limit",
+  "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "latestUnreadIsAbove": "First unread message is above",
+  "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
+  "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "notificationSubtitle": "Notifications - $setting$"
 }
