--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -1,16 +1,16 @@
 {
-  "privacyPolicy": "Terms & Privacy Policy",
-  "copyErrorAndQuit": "Copy error and quit",
-  "unknown": "Unknown",
-  "databaseError": "Database Error",
-  "mainMenuFile": "&File",
-  "mainMenuEdit": "&Edit",
-  "mainMenuView": "&View",
-  "mainMenuWindow": "&Window",
-  "mainMenuHelp": "&Help",
-  "appMenuHide": "Hide",
-  "appMenuHideOthers": "Hide Others",
-  "appMenuUnhide": "Show All",
+  "privacyPolicy": "शर्तें और गोपनीयता नीति",
+  "copyErrorAndQuit": "चूक कॉपी करें और छोड़ दें",
+  "unknown": "अनजान",
+  "databaseError": "डेटाबेस त्रुटि",
+  "mainMenuFile": "&फाइल",
+  "mainMenuEdit": "संपादित करें",
+  "mainMenuView": "देखें",
+  "mainMenuWindow": "विंडो",
+  "mainMenuHelp": "सहायता",
+  "appMenuHide": "छिपाएँ",
+  "appMenuHideOthers": "बाकियों को छुपाएं",
+  "appMenuUnhide": "सभी को दिखाएं",
   "appMenuQuit": "Quit Session",
   "editMenuUndo": "Undo",
   "editMenuRedo": "Redo",
@@ -20,8 +20,6 @@
   "editMenuPasteAndMatchStyle": "Paste and Match Style",
   "editMenuDelete": "हटाना",
   "editMenuSelectAll": "Select All",
-  "editMenuStartSpeaking": "Start speaking",
-  "editMenuStopSpeaking": "Stop speaking",
   "windowMenuClose": "Close Window",
   "windowMenuMinimize": "Minimize",
   "windowMenuZoom": "Zoom",
@@ -31,29 +29,20 @@
   "viewMenuZoomOut": "Zoom Out",
   "viewMenuToggleFullScreen": "Toggle Full Screen",
   "viewMenuToggleDevTools": "Toggle Developer Tools",
-  "menuSetupWithImport": "Set Up with Import",
   "contextMenuNoSuggestions": "No Suggestions",
+  "openGroupInvitation": "Open group invitation",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "लोड हो रहा है",
   "optimizingApplication": "Optimizing application...",
-  "chooseDirectory": "फोल्डर को चुनो",
   "done": "Done",
-  "loadDataHeader": "Load your data",
-  "loadDataDescription": "You've just gone through the export process, and your contacts and messages are waiting patiently on your computer. Select the folder that contains your saved Session data.",
-  "importChooserTitle": "डेटा के लिए लक्ष्य निर्देशिका चुनें",
-  "importErrorHeader": "कुछ गलत हो गया",
-  "importingHeader": "Loading contacts and messages",
-  "importErrorFirst": "Make sure you have chosen the correct directory that contains your saved Session data. Its name should begin with 'Session Export.' You can also save a new copy of your data from the Chrome App.",
-  "importErrorSecond": "If these steps don't work for you, please submit a debug log (View -> Debug Log) so that we can help you get migrated!",
-  "importAgain": "फ़ोल्डर का चयन करें और पुनः प्रयास करें",
-  "importCompleteHeader": "सफलता",
-  "importCompleteStartButton": "Start using Session Desktop",
-  "importCompleteLinkButton": "Link this device to your phone",
   "me": "मुझे",
   "view": "राय",
   "youLeftTheGroup": "आपने समूह छोड़ दिया",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "1 अपठित संदेश",
-  "unreadMessages": "$count$ अपठित संदेश",
+  "unreadMessage": "Unread Message",
+  "unreadMessages": "Unread Messages",
   "debugLogExplanation": "यह अभिलेख ऑनलाइन भेजा जाएगा अन्या सहयोगियो के जाँच पड़ताल के लिए. भेजने से पहेले ठीक से सनपदान कर ले",
   "debugLogError": "Something went wrong with the upload! Please consider manually adding your log to the bug you file.",
   "reportIssue": "मामले की रिपोर्ट करें",
@@ -66,9 +55,9 @@
   "documents": "Documents",
   "documentsEmptyState": "You don’t have any documents in this conversation",
   "today": "Today",
-  "yesterday": "Yesterday",
+  "yesterday": "कल",
   "thisWeek": "This Week",
-  "thisMonth": "This Month",
+  "thisMonth": "इस महीने",
   "voiceMessage": "ध्वनि संदेश",
   "dangerousFileType": "Attachment type not allowed for security reasons",
   "stagedPreviewThumbnail": "Draft thumbnail link preview for $domain$",
@@ -82,26 +71,26 @@
   "offline": "ऑफ़लाइन",
   "checkNetworkConnection": "अपने नेटवर्क कनेक्शन की जांच करें।",
   "attemptingReconnection": "फिर से कनेक्ट करने का प्रयास करना$reconnect_duration_in_seconds$सेकंड",
-  "submitDebugLog": "Debug log",
+  "submitDebugLog": "डीबग लॉग",
   "debugLog": "लॉग को डीबग करें",
   "goToReleaseNotes": "Go to Release Notes",
   "goToSupportPage": "Go to Support Page",
   "menuReportIssue": "Report an Issue",
-  "about": "About",
+  "about": "हमारे बारे में",
   "speech": "भाषण",
   "show": "दिखाना",
-  "sessionMessenger": "Session",
+  "sessionMessenger": "सैशन",
   "search": "सर्च",
   "noSearchResults": "No results for \"$searchTerm$\"",
   "conversationsHeader": "संवाद",
   "contactsHeader": "संपर्क",
   "messagesHeader": "संदेश",
-  "settingsHeader": "Settings",
+  "settingsHeader": "सेटिंग्स",
   "typingAlt": "Typing animation for this conversation",
   "contactAvatarAlt": "Avatar for contact $name$",
   "downloadAttachment": "Download Attachment",
   "replyToMessage": "Reply to Message",
-  "replyingToMessage": "Replying to:",
+  "replyingToMessage": "को जवाब दे रहे हैं",
   "originalMessageNotFound": "Original message not found",
   "originalMessageNotAvailable": "Original message no longer available",
   "messageFoundButNotLoaded": "Original message found, but not loaded. Scroll up to load it.",
@@ -126,7 +115,7 @@
   "deleteMultipleWarning": "Are you sure? Clicking 'delete' will permanently remove these messages from this device only.",
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
   "deleteThisMessage": "यह संदेश हटाएं",
-  "deleted": "Deleted",
+  "deleted": "हटा दिया गया",
   "from": "किस से",
   "to": "to",
   "sent": "भेज दिया",
@@ -157,6 +146,8 @@
   "saved": "Saved",
   "permissions": "Permissions",
   "general": "General",
+  "tookAScreenshot": "$name$ took a screenshot",
+  "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
   "linkPreviewDescription": "Previews are supported for most urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
@@ -210,6 +201,8 @@
   "disappearingMessages": "गायब होने वाले संदेश",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear nickname",
+  "nicknamePlaceholder": "New Nickname",
+  "changeNicknameMessage": "Enter a nickname for this user",
   "timerOption_0_seconds_abbreviated": "बंद",
   "timerOption_5_seconds_abbreviated": "5 एस",
   "timerOption_10_seconds_abbreviated": "10 एस",
@@ -231,6 +224,7 @@
   "hideMenuBarDescription": "Toggle system menu bar visibility",
   "startConversation": "Start new conversation…",
   "invalidNumberError": "अमान्य संख्या",
+  "failedResolveOns": "Failed to resolve ONS name",
   "successUnlinked": "Your device was unlinked successfully",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
@@ -253,6 +247,7 @@
   "blockUser": "Block",
   "unblockUser": "Unblock",
   "unblocked": "Unblocked",
+  "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked contacts",
   "unbanUser": "Unban User",
   "unbanUserConfirm": "Are you sure you want to unban user?",
@@ -260,6 +255,8 @@
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
   "banUserConfirm": "Are you sure you want to ban user?",
+  "banUserAndDeleteAll": "Ban and Delete All",
+  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "Leave Group",
@@ -268,9 +265,9 @@
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
   "cannotRemoveCreatorFromGroup": "Cannot remove this user",
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
-  "userNeedsToHaveJoined": "User needs to have joined",
-  "userNeedsToHaveJoinedDesc": "An error happened. The user needs to have already joined the server for this ADD to work.",
   "noContactsForGroup": "You don't have any contacts yet",
+  "failedToAddAsModerator": "Failed to add user as moderator",
+  "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
   "copyMessage": "Copy message text",
   "selectMessage": "Select message",
   "editGroup": "Edit group",
@@ -359,7 +356,7 @@
   "beginYourSession": "Begin<br />your<br />Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
-  "searchFor...": "Search for conversations, contacts, and messages",
+  "searchFor...": "Search for conversations or contacts",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
@@ -386,9 +383,41 @@
   "noBlockedContacts": "No blocked contacts",
   "userAddedToModerators": "User added to moderator list",
   "userRemovedFromModerators": "User removed from moderator list",
-  "errorHappenedWhileRemovingModerator": "An error happened",
-  "errorHappenedWhileRemovingModeratorDesc": "An error happened while removing this user from the moderator list.",
   "orJoinOneOfThese": "Or join one of these...",
   "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation"
+  "translation": "Translation",
+  "closedGroupInviteFailTitle": "Group Invitation Failed",
+  "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
+  "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
+  "closedGroupInviteFailMessagePlural": "Unable to successfully invite all group members",
+  "closedGroupInviteOkText": "Retry invitations",
+  "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
+  "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
+  "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
+  "notificationForConvo": "Notifications",
+  "notificationForConvo_all": "All",
+  "notificationForConvo_disabled": "Disabled",
+  "notificationForConvo_mentions_only": "Mentions only",
+  "onionPathIndicatorTitle": "Path",
+  "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
+  "unknownCountry": "Unknown Country",
+  "device": "Device",
+  "destination": "Destination",
+  "learnMore": "Learn more",
+  "linkVisitWarningTitle": "Open this link in your browser?",
+  "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
+  "open": "Open",
+  "audioMessageAutoplayTitle": "Audio Message Autoplay",
+  "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
+  "clickToTrustContact": "Click to download media",
+  "trustThisContactDialogTitle": "Trust $name$?",
+  "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
+  "pinConversation": "Pin Conversation",
+  "unpinConversation": "Unpin Conversation",
+  "pinConversationLimitTitle": "Pinned conversations limit",
+  "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "latestUnreadIsAbove": "First unread message is above",
+  "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
+  "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "notificationSubtitle": "Notifications - $setting$"
 }
