--- a/_locales/ta/messages.json
+++ b/_locales/ta/messages.json
@@ -1,53 +1,42 @@
 {
-  "privacyPolicy": "Terms & Privacy Policy",
-  "copyErrorAndQuit": "Copy error and quit",
-  "unknown": "Unknown",
-  "databaseError": "Database Error",
-  "mainMenuFile": "&File",
-  "mainMenuEdit": "&Edit",
-  "mainMenuView": "&View",
-  "mainMenuWindow": "&Window",
-  "mainMenuHelp": "&Help",
-  "appMenuHide": "Hide",
-  "appMenuHideOthers": "Hide Others",
-  "appMenuUnhide": "Show All",
-  "appMenuQuit": "Quit Session",
-  "editMenuUndo": "Undo",
-  "editMenuRedo": "Redo",
-  "editMenuCut": "Cut",
+  "privacyPolicy": "விதிமுறை மற்றும் தனியுரிமை ௧ோள்கை",
+  "copyErrorAndQuit": "கோளாறை காபீ செய்து வெலியேரவும்",
+  "unknown": "அறியாத",
+  "databaseError": "தரவுதல கோலாரு",
+  "mainMenuFile": "&பைஃயில்",
+  "mainMenuEdit": "&திருத்தம்",
+  "mainMenuView": "&கான",
+  "mainMenuWindow": "&வின்டோ",
+  "mainMenuHelp": "&உதவி",
+  "appMenuHide": "மறை",
+  "appMenuHideOthers": "மற்றவையை மறை",
+  "appMenuUnhide": "எல்லாம் காண்பி",
+  "appMenuQuit": "செஸ்ஸனிலிரு்து வெலியேரு",
+  "editMenuUndo": "பின்வாங்கு",
+  "editMenuRedo": "மீண்டும் செய்",
+  "editMenuCut": "பிரி",
   "editMenuCopy": "Copy",
   "editMenuPaste": "Paste",
   "editMenuPasteAndMatchStyle": "Paste and Match Style",
-  "editMenuDelete": "Delete",
+  "editMenuDelete": "நீக்கு",
   "editMenuSelectAll": "Select all",
-  "editMenuStartSpeaking": "Start speaking",
-  "editMenuStopSpeaking": "Stop speaking",
   "windowMenuClose": "Close Window",
   "windowMenuMinimize": "Minimize",
   "windowMenuZoom": "Zoom",
   "windowMenuBringAllToFront": "Bring All to Front",
   "viewMenuResetZoom": "Actual Size",
-  "viewMenuZoomIn": "Zoom In",
-  "viewMenuZoomOut": "Zoom Out",
+  "viewMenuZoomIn": "பெரிதாக்கு",
+  "viewMenuZoomOut": "சிறிதாக்கு",
   "viewMenuToggleFullScreen": "Toggle Full Screen",
   "viewMenuToggleDevTools": "Toggle Developer Tools",
-  "menuSetupWithImport": "Set Up with Import",
-  "contextMenuNoSuggestions": "No Suggestions",
-  "loading": "Loading...",
+  "contextMenuNoSuggestions": "பரிந்துரைகள் இல்லை",
+  "openGroupInvitation": "Open group invitation",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
+  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
+  "loading": "ஏற்றபடுகின்றது...",
   "optimizingApplication": "Optimizing application...",
-  "chooseDirectory": "Choose folder",
-  "done": "Done",
-  "loadDataHeader": "Load your data",
-  "loadDataDescription": "You've just gone through the export process, and your contacts and messages are waiting patiently on your computer. Select the folder that contains your saved Session data.",
-  "importChooserTitle": "Choose directory with exported data",
-  "importErrorHeader": "Something went wrong!",
-  "importingHeader": "Loading contacts and messages",
-  "importErrorFirst": "Make sure you have chosen the correct directory that contains your saved Session data. Its name should begin with 'Session Export.' You can also save a new copy of your data from the Chrome App.",
-  "importErrorSecond": "If these steps don't work for you, please submit a debug log (View -> Debug Log) so that we can help you get migrated!",
-  "importAgain": "Choose folder and try again",
-  "importCompleteHeader": "Success!",
-  "importCompleteStartButton": "Start using Session",
-  "importCompleteLinkButton": "Link this device to your phone",
+  "done": "முடிந்தது",
   "me": "Me",
   "view": "View",
   "youLeftTheGroup": "You have left the group.",
@@ -79,7 +68,7 @@
   "maximumAttachments": "Maximum number of attachments reached. Please send remaining attachments in a separate message.",
   "fileSizeWarning": "Attachment exceeds size limits for the type of message you're sending.",
   "unableToLoadAttachment": "Sorry, there was an error setting your attachment.",
-  "offline": "Offline",
+  "offline": "ஆஃப்லைன்",
   "checkNetworkConnection": "Check your network connection.",
   "attemptingReconnection": "Attempting reconnect in $reconnect_duration_in_seconds$ seconds",
   "submitDebugLog": "Debug log",
@@ -87,59 +76,59 @@
   "goToReleaseNotes": "Go to Release Notes",
   "goToSupportPage": "Go to Support Page",
   "menuReportIssue": "Report an Issue",
-  "about": "About",
-  "speech": "Speech",
-  "show": "Show",
-  "sessionMessenger": "Session",
-  "search": "Search",
-  "noSearchResults": "No results found for \"$searchTerm$\"",
-  "conversationsHeader": "Conversations",
-  "contactsHeader": "Contacts",
-  "messagesHeader": "Messages",
-  "settingsHeader": "Settings",
+  "about": "இதைப் பற்றி",
+  "speech": "பேச்சு",
+  "show": "காட்டு",
+  "sessionMessenger": "செஸ்ஸன்",
+  "search": "தேடு",
+  "noSearchResults": "\"{$searchTerm$\" க்கான தேடல் முடிவுகள் எதுவும் இல்லை",
+  "conversationsHeader": "உரையாடல்கள்",
+  "contactsHeader": "தொடர்புகள்",
+  "messagesHeader": "தகவல்கள்",
+  "settingsHeader": "அமைப்புகள்",
   "typingAlt": "Typing animation for this conversation",
   "contactAvatarAlt": "Avatar for contact $name$",
-  "downloadAttachment": "Download Attachment",
-  "replyToMessage": "Reply to message",
-  "replyingToMessage": "Replying to:",
+  "downloadAttachment": "இணைப்பு பதிவிறக்கம்",
+  "replyToMessage": "செய்திக்கு பதிலளி",
+  "replyingToMessage": "பதில்:",
   "originalMessageNotFound": "Original message not found",
   "originalMessageNotAvailable": "Original message no longer available",
   "messageFoundButNotLoaded": "Original message found, but not loaded. Scroll up to load it.",
   "recording": "Recording",
-  "you": "You",
+  "you": "நீங்கள்",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "You can enable microphone access under: Settings (Gear icon) => Privacy",
-  "audio": "Audio",
-  "video": "Video",
-  "photo": "Photo",
+  "audio": "கேட்பொலி",
+  "video": "காணொளி",
+  "photo": "புகைப்படம்",
   "cannotUpdate": "Cannot Update",
   "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
-  "ok": "OK",
-  "cancel": "Cancel",
-  "close": "Close",
-  "continue": "Continue",
-  "error": "Error",
-  "delete": "Delete",
+  "ok": "சரி",
+  "cancel": "ரத்து செய்",
+  "close": "மூடு",
+  "continue": "தொடரு",
+  "error": "கோலாரு",
+  "delete": "நீக்கு",
   "deletePublicWarning": "Are you sure? This will permanently remove this message for everyone in this open group.",
   "deleteMultiplePublicWarning": "Are you sure? This will permanently remove these messages for everyone in this open group.",
   "deleteWarning": "Are you sure? Clicking 'delete' will permanently remove this message from this device only.",
   "deleteMultipleWarning": "Are you sure? Clicking 'delete' will permanently remove these messages from this device only.",
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
   "deleteThisMessage": "Delete message",
-  "deleted": "Deleted",
-  "from": "From:",
-  "to": "To:",
-  "sent": "Sent",
-  "received": "Received",
-  "sendMessage": "Message",
-  "groupMembers": "Group members",
-  "moreInformation": "More information",
-  "resend": "Resend",
-  "deleteMessage": "Delete Message",
-  "deleteMessages": "Delete Messages",
-  "deleteMessageForEveryone": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Delete Messages For Everyone",
-  "deleteForEveryone": "Delete For Everyone",
+  "deleted": "நீக்கபடுல்லது",
+  "from": "அனுப்புனர்:",
+  "to": "பெறுநர்:",
+  "sent": "அனுப்பப்பட்டது",
+  "received": "பெறப்பட்டது",
+  "sendMessage": "செய்தி",
+  "groupMembers": "குழு ",
+  "moreInformation": "மேற்கொண்ட தகவல்கள்",
+  "resend": "மீண்டும் அனுப்பு",
+  "deleteMessage": "தகவலை நீக்கு",
+  "deleteMessages": "தகவலைகலை நீக்கு",
+  "deleteMessageForEveryone": "எல்லோருக்கும் தகவலை நீக்கு",
+  "deleteMessagesForEveryone": "எல்லோருக்கும் தகவலைகளை நீக்கு",
+  "deleteForEveryone": "எல்லோருக்கும் தகவலைகளை நீக்கு",
   "deleteConversationConfirmation": "Permanently delete the messages in this conversation?",
   "clearAllData": "Clear All Data",
   "deleteAccountWarning": "This will permanently delete your messages, sessions, and contacts.",
@@ -157,6 +146,8 @@
   "saved": "Saved",
   "permissions": "Permissions",
   "general": "General",
+  "tookAScreenshot": "$name$ took a screenshot",
+  "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
   "linkPreviewDescription": "Previews are supported for most urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
@@ -210,6 +201,8 @@
   "disappearingMessages": "Disappearing messages",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear nickname",
+  "nicknamePlaceholder": "New Nickname",
+  "changeNicknameMessage": "Enter a nickname for this user",
   "timerOption_0_seconds_abbreviated": "off",
   "timerOption_5_seconds_abbreviated": "5s",
   "timerOption_10_seconds_abbreviated": "10s",
@@ -231,6 +224,7 @@
   "hideMenuBarDescription": "Toggle system menu bar visibility",
   "startConversation": "Start New Conversation",
   "invalidNumberError": "Invalid Session ID or ONS Name",
+  "failedResolveOns": "Failed to resolve ONS name",
   "successUnlinked": "Your device was unlinked successfully",
   "autoUpdateSettingTitle": "Auto Update",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
@@ -253,6 +247,7 @@
   "blockUser": "Block",
   "unblockUser": "Unblock",
   "unblocked": "Unblocked",
+  "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked contacts",
   "unbanUser": "Unban User",
   "unbanUserConfirm": "Are you sure you want to unban user?",
@@ -260,6 +255,8 @@
   "userUnbanFailed": "Unban failed!",
   "banUser": "Ban User",
   "banUserConfirm": "Are you sure you want to ban user?",
+  "banUserAndDeleteAll": "Ban and Delete All",
+  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Ban failed!",
   "leaveGroup": "Leave Group",
@@ -268,9 +265,9 @@
   "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
   "cannotRemoveCreatorFromGroup": "Cannot remove this user",
   "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
-  "userNeedsToHaveJoined": "User needs to have joined",
-  "userNeedsToHaveJoinedDesc": "An error happened. The user needs to have already joined the server for this ADD to work.",
   "noContactsForGroup": "You don't have any contacts yet",
+  "failedToAddAsModerator": "Failed to add user as moderator",
+  "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
   "copyMessage": "Copy message text",
   "selectMessage": "Select message",
   "editGroup": "Edit group",
@@ -338,7 +335,7 @@
   "noModeratorsToRemove": "no moderators to remove",
   "onlyAdminCanRemoveMembers": "You are not the creator",
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
-  "createAccount": "Create Account",
+  "createAccount": "கணக்கை உருவாக்கு",
   "signIn": "Sign In",
   "yourUniqueSessionID": "Say hello to your Session ID",
   "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
@@ -359,7 +356,7 @@
   "beginYourSession": "Begin<br />your<br />Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
-  "searchFor...": "Search for conversations, contacts, and messages",
+  "searchFor...": "Search for conversations or contacts",
   "enterSessionID": "Enter Session ID",
   "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
@@ -386,9 +383,41 @@
   "noBlockedContacts": "No blocked contacts",
   "userAddedToModerators": "User added to moderator list",
   "userRemovedFromModerators": "User removed from moderator list",
-  "errorHappenedWhileRemovingModerator": "An error happened",
-  "errorHappenedWhileRemovingModeratorDesc": "An error happened while removing this user from the moderator list.",
   "orJoinOneOfThese": "Or join one of these...",
   "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation"
+  "translation": "Translation",
+  "closedGroupInviteFailTitle": "Group Invitation Failed",
+  "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
+  "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
+  "closedGroupInviteFailMessagePlural": "Unable to successfully invite all group members",
+  "closedGroupInviteOkText": "Retry invitations",
+  "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
+  "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
+  "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
+  "notificationForConvo": "Notifications",
+  "notificationForConvo_all": "All",
+  "notificationForConvo_disabled": "Disabled",
+  "notificationForConvo_mentions_only": "Mentions only",
+  "onionPathIndicatorTitle": "Path",
+  "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
+  "unknownCountry": "Unknown Country",
+  "device": "Device",
+  "destination": "Destination",
+  "learnMore": "Learn more",
+  "linkVisitWarningTitle": "Open this link in your browser?",
+  "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
+  "open": "Open",
+  "audioMessageAutoplayTitle": "Audio Message Autoplay",
+  "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
+  "clickToTrustContact": "Click to download media",
+  "trustThisContactDialogTitle": "Trust $name$?",
+  "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
+  "pinConversation": "Pin Conversation",
+  "unpinConversation": "Unpin Conversation",
+  "pinConversationLimitTitle": "Pinned conversations limit",
+  "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
+  "latestUnreadIsAbove": "First unread message is above",
+  "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
+  "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "notificationSubtitle": "Notifications - $setting$"
 }
